--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -404,7 +404,7 @@
 （欽州音）	菡	hảm
 （南寧音）	菡	hãm
 （廣州音）	殷	an
-（廣州音）	殷	yiên
+（廣州音）	殷	yiên/yên
 （廣州音）	殷	yân
 （廣州音）	殷	yẩn
 （台山音）	殷	yiến
@@ -414,14 +414,14 @@
 （欽州音）	殷	yẩn
 （南寧音）	殷	yân
 （南寧音）	殷	yẩn
-（南寧音）	殷	yiên
-（廣州音）	俺	yiếm
+（南寧音）	殷	yiên/yên
+（廣州音）	俺	yiếm/yếm
 （廣州音）	俺	ản
 （台山音）	俺	yiểm
 （台山音）	俺	ám
 （欽州音）	俺	ản
 （南寧音）	俺	(又)ản
-（南寧音）	俺	yiếm
+（南寧音）	俺	yiếm/yếm
 （廣州音）	䁙	án
 （廣州音）	䨃	án
 （廣州音）	䳛	án
@@ -553,9 +553,9 @@
 （廣州音）	歺	ngạt
 （廣州音）	歺	át
 （台山音）	歺	ải
-（廣州音）	猒	yiêm
-（廣州音）	猒	yiếm
-（廣州音）	猒	yiểm
+（廣州音）	猒	yiêm/yêm
+（廣州音）	猒	yiếm/yếm
+（廣州音）	猒	yiểm/yểm
 （廣州音）	猒	át
 （廣州音）	猰	chát
 （廣州音）	猰	yách
@@ -852,17 +852,17 @@
 （台山音）	垵	ám
 （欽州音）	垵	ẩm
 （南寧音）	垵	ẩm
-（廣州音）	奄	yiêm
-（廣州音）	奄	yiểm
+（廣州音）	奄	yiêm/yêm
+（廣州音）	奄	yiểm/yểm
 （廣州音）	奄	âm
 （台山音）	奄	yiểm
 （欽州音）	奄	yiêm
-（南寧音）	奄	yiêm
-（南寧音）	奄	yiểm
+（南寧音）	奄	yiêm/yêm
+（南寧音）	奄	yiểm/yểm
 （廣州音）	媕	âm
 （台山音）	媕	ám
 （欽州音）	媕	âm
-（廣州音）	广	yiểm
+（廣州音）	广	yiểm/yểm
 （廣州音）	广	yiễm
 （廣州音）	广	âm
 （台山音）	广	ám
@@ -943,13 +943,13 @@
 （台山音）	啽	ngáp
 （欽州音）	啽	ngầm
 （南寧音）	啽	ngầm
-（廣州音）	揜	yiểm
+（廣州音）	揜	yiểm/yểm
 （廣州音）	揜	ẩm
 （廣州音）	揞	ẩm
 （台山音）	揞	ảm
 （欽州音）	揞	ẩm
 （南寧音）	揞	ẩm
-（廣州音）	晻	yiểm
+（廣州音）	晻	yiểm/yểm
 （廣州音）	晻	ấm
 （廣州音）	晻	ẩm
 （廣州音）	罯	âp
@@ -1029,23 +1029,23 @@
 （欽州音）	洽	hâp
 （南寧音）	洽	hạp
 （南寧音）	洽	(又)hập
-（廣州音）	罨	yiểm
+（廣州音）	罨	yiểm/yểm
 （廣州音）	罨	âp
 （台山音）	罨	yiểm
 （欽州音）	罨	âp
-（南寧音）	罨	yiểm
+（南寧音）	罨	yiểm/yểm
 （廣州音）	邑	yâp
 （廣州音）	邑	âp
 （台山音）	邑	yâp
 （欽州音）	邑	yâp
 （南寧音）	邑	yâp
-（廣州音）	醃	yiêm
+（廣州音）	醃	yiêm/yêm
 （廣州音）	醃	yiếp
 （廣州音）	醃	âp
 （台山音）	醃	yiểm
 （欽州音）	醃	yiêm
 （欽州音）	醃	yiếp
-（南寧音）	醃	(書)yiêm
+（南寧音）	醃	(書)yiêm/yêm
 （南寧音）	醃	(習)yiếp
 （廣州音）	鰪	âp
 （廣州音）	扤	ngât
@@ -18846,17 +18846,17 @@
 （廣州音）	怤	phu
 （廣州音）	恗	phu
 （廣州音）	惡	phu
-（廣州音）	惡	u
-（廣州音）	惡	ú
+（廣州音）	惡	u/vu
+（廣州音）	惡	ú/vú
 （廣州音）	惡	óc
 （台山音）	惡	oc
-（台山音）	惡	ú
+（台山音）	惡	vú
 （台山音）	惡	óc
-（欽州音）	惡	u
-（欽州音）	惡	ú
+（欽州音）	惡	u/vu
+（欽州音）	惡	ú/vú
 （欽州音）	惡	óc
 （南寧音）	惡	óc
-（南寧音）	惡	ú
+（南寧音）	惡	ú/vú
 （廣州音）	懯	phu
 （廣州音）	戯	hý
 （廣州音）	戯	phu
@@ -19063,7 +19063,7 @@
 （南寧音）	滏	phổ
 （廣州音）	滸	hủi
 （廣州音）	滸	phủ
-（廣州音）	滸	ủ
+（廣州音）	滸	ủ/vủ
 （台山音）	滸	hủi
 （台山音）	滸	phủ
 （欽州音）	滸	phủ
@@ -28659,7 +28659,7 @@
 （廣州音）	鋡	hầm
 （廣州音）	馠	hầm
 （廣州音）	淊	hẫm
-（廣州音）	淊	yiêm
+（廣州音）	淊	yiêm/yêm
 （廣州音）	蛿	hẫm
 （廣州音）	蜭	hẫm
 （廣州音）	頷	hẫm
@@ -31141,14 +31141,14 @@
 （廣州音）	㷎	hót
 （廣州音）	㿣	hót
 （廣州音）	喝	hót
-（廣州音）	喝	yiết
+（廣州音）	喝	yiết/yết
 （台山音）	喝	hót
 （欽州音）	喝	hót
 （南寧音）	喝	hót
 （廣州音）	嵑	hót
 （廣州音）	嵑	khiết
 （廣州音）	暍	hót
-（廣州音）	暍	yiết
+（廣州音）	暍	yiết/yết
 （台山音）	暍	hót
 （台山音）	暍	yich
 （廣州音）	毼	hót
@@ -32116,8 +32116,8 @@
 （南寧音）	坅	hẩm
 （廣州音）	昑	yẩm
 （廣州音）	淾	yẩm
-（廣州音）	酓	yiếm
-（廣州音）	酓	yiểm
+（廣州音）	酓	yiếm/yếm
+（廣州音）	酓	yiểm/yểm
 （廣州音）	酓	yẩm
 （廣州音）	飮	yấm
 （廣州音）	飮	yẩm
@@ -32402,13 +32402,13 @@
 （台山音）	洇	yấn
 （欽州音）	洇	yân
 （南寧音）	洇	yân
-（廣州音）	湮	yiên
+（廣州音）	湮	yiên/yên
 （廣州音）	湮	yân
 （台山音）	湮	yiến
 （台山音）	湮	yấn
 （欽州音）	湮	yiên
 （南寧音）	湮	yân
-（南寧音）	湮	(又)yiên
+（南寧音）	湮	(又)yiên/yên
 （廣州音）	溵	yân
 （南寧音）	溵	yân
 （廣州音）	潱	yân
@@ -34841,113 +34841,113 @@
 （廣州音）	𤥿	yịch
 （廣州音）	𦏵	yịch
 （廣州音）	𦐂	yịch
-（廣州音）	㤿	yiêm
+（廣州音）	㤿	yiêm/yêm
 （欽州音）	㤿	yiêm
-（南寧音）	㤿	yiêm
-（廣州音）	㦔	yiêm
-（廣州音）	䅧	yiêm
-（廣州音）	偣	yiêm
-（廣州音）	厭	yiêm
-（廣州音）	厭	yiếm
+（南寧音）	㤿	yiêm/yêm
+（廣州音）	㦔	yiêm/yêm
+（廣州音）	䅧	yiêm/yêm
+（廣州音）	偣	yiêm/yêm
+（廣州音）	厭	yiêm/yêm
+（廣州音）	厭	yiếm/yếm
 （台山音）	厭	yiếm
 （欽州音）	厭	yiếm
 （欽州音）	厭	yiếp
-（南寧音）	厭	yiếm
-（廣州音）	噞	yiêm
-（廣州音）	噞	yiểm
-（廣州音）	嬮	yiêm
-（廣州音）	嬮	yiếm
-（廣州音）	崦	yiêm
+（南寧音）	厭	yiếm/yếm
+（廣州音）	噞	yiêm/yêm
+（廣州音）	噞	yiểm/yểm
+（廣州音）	嬮	yiêm/yêm
+（廣州音）	嬮	yiếm/yếm
+（廣州音）	崦	yiêm/yêm
 （台山音）	崦	yiểm
-（南寧音）	崦	yiêm
-（廣州音）	嶖	yiêm
-（廣州音）	懕	yiêm
-（廣州音）	懨	yiêm
+（南寧音）	崦	yiêm/yêm
+（廣州音）	嶖	yiêm/yêm
+（廣州音）	懕	yiêm/yêm
+（廣州音）	懨	yiêm/yêm
 （台山音）	懨	yiếm
 （欽州音）	懨	yiêm
-（南寧音）	懨	yiêm
-（廣州音）	淹	yiêm
+（南寧音）	懨	yiêm/yêm
+（廣州音）	淹	yiêm/yêm
 （台山音）	淹	yiểm
 （欽州音）	淹	yiêm
-（南寧音）	淹	yiêm
-（廣州音）	渰	yiêm
-（廣州音）	渰	yiểm
-（南寧音）	渰	yiểm
-（廣州音）	硽	yiêm
-（廣州音）	腌	yiêm
+（南寧音）	淹	yiêm/yêm
+（廣州音）	渰	yiêm/yêm
+（廣州音）	渰	yiểm/yểm
+（南寧音）	渰	yiểm/yểm
+（廣州音）	硽	yiêm/yêm
+（廣州音）	腌	yiêm/yêm
 （廣州音）	腌	yiếp
 （台山音）	腌	lã
 （台山音）	腌	yiếp
 （台山音）	腌	yiểm
 （南寧音）	腌	âp
-（南寧音）	腌	(書)yiêm
+（南寧音）	腌	(書)yiêm/yêm
 （南寧音）	腌	(習)yiếp
-（廣州音）	閹	yiêm
+（廣州音）	閹	yiêm/yêm
 （台山音）	閹	yiếm
 （欽州音）	閹	yiêm
-（南寧音）	閹	yiêm
-（廣州音）	饜	yiêm
-（廣州音）	饜	yiếm
+（南寧音）	閹	yiêm/yêm
+（廣州音）	饜	yiêm/yêm
+（廣州音）	饜	yiếm/yếm
 （台山音）	饜	yiếm
 （欽州音）	饜	yiếm
-（南寧音）	饜	yiếm
-（廣州音）	𣸰	yiêm
-（廣州音）	𦝡	yiêm
-（廣州音）	𦝡	yiểm
-（廣州音）	𦞴	yiêm
-（廣州音）	㭺	yiểm
-（廣州音）	㱘	yiểm
-（廣州音）	䄋	yiểm
-（廣州音）	䣍	yiểm
-（廣州音）	䲓	yiểm
-（廣州音）	偃	yiểm
-（廣州音）	偃	yiển
+（南寧音）	饜	yiếm/yếm
+（廣州音）	𣸰	yiêm/yêm
+（廣州音）	𦝡	yiêm/yêm
+（廣州音）	𦝡	yiểm/yểm
+（廣州音）	𦞴	yiêm/yêm
+（廣州音）	㭺	yiểm/yểm
+（廣州音）	㱘	yiểm/yểm
+（廣州音）	䄋	yiểm/yểm
+（廣州音）	䣍	yiểm/yểm
+（廣州音）	䲓	yiểm/yểm
+（廣州音）	偃	yiểm/yểm
+（廣州音）	偃	yiển/yển
 （台山音）	偃	yiển
 （欽州音）	偃	yiển
 （南寧音）	偃	(白)ẻn
-（南寧音）	偃	yiển
-（廣州音）	剦	yiểm
-（廣州音）	厴	yiểm
+（南寧音）	偃	yiển/yển
+（廣州音）	剦	yiểm/yểm
+（廣州音）	厴	yiểm/yểm
 （台山音）	厴	yiểm
 （欽州音）	厴	yiểm
-（南寧音）	厴	yiểm
-（廣州音）	弇	yiểm
+（南寧音）	厴	yiểm/yểm
+（廣州音）	弇	yiểm/yểm
 （台山音）	弇	yiểm
 （欽州音）	弇	yiểm
-（南寧音）	弇	yiểm
-（廣州音）	掩	yiểm
+（南寧音）	弇	yiểm/yểm/yểm
+（廣州音）	掩	yiểm/yểm
 （台山音）	掩	yiểm
 （欽州音）	掩	yiểm
-（南寧音）	掩	yiểm
-（廣州音）	檿	yiểm
-（廣州音）	裺	yiểm
+（南寧音）	掩	yiểm/yểm
+（廣州音）	檿	yiểm/yểm
+（廣州音）	裺	yiểm/yểm
 （廣州音）	隒	yiểm
 （廣州音）	靨	yiếp
-（廣州音）	靨	yiểm
+（廣州音）	靨	yiểm/yểm
 （廣州音）	靨	yiệp
 （台山音）	靨	yiểm
 （欽州音）	靨	yiếp
 （南寧音）	靨	yiếp
 （廣州音）	魘	yiếp
-（廣州音）	魘	yiểm
+（廣州音）	魘	yiểm/yểm
 （台山音）	魘	yiếm
 （欽州音）	魘	yiểm
-（南寧音）	魘	yiểm
-（廣州音）	黤	yiểm
-（廣州音）	黭	yiểm
-（廣州音）	黶	yiểm
+（南寧音）	魘	yiểm/yểm
+（廣州音）	黤	yiểm/yểm
+（廣州音）	黭	yiểm/yểm
+（廣州音）	黶	yiểm/yểm
 （台山音）	黶	yiểm
-（南寧音）	黶	yiểm
-（廣州音）	龑	yiểm
+（南寧音）	黶	yiểm/yểm
+（廣州音）	龑	yiểm/yểm
 （廣州音）	龑	yiển
 （廣州音）	龑	yiễm
 （台山音）	龑	yiểm
 （欽州音）	龑	yiểm
-（南寧音）	龑	yiểm
+（南寧音）	龑	yiểm/yểm
 （廣州音）	𥀬	yiểm
-（南寧音）	𥀬	yiểm
-（廣州音）	㛪	yiếm
-（廣州音）	䛳	yiếm
+（南寧音）	𥀬	yiểm/yểm
+（廣州音）	㛪	yiếm/yếm
+（廣州音）	䛳	yiếm/yếm
 （廣州音）	㶄	yiềm
 （廣州音）	㿕	yiềm
 （台山音）	㿕	yiềm
@@ -35136,7 +35136,7 @@
 （台山音）	灩	yiệm
 （欽州音）	灩	yiếm
 （南寧音）	灩	yiệm
-（南寧音）	灩	(又)yiến
+（南寧音）	灩	(又)yiến/yến
 （廣州音）	焔	yiệm
 （台山音）	焔	yiệm
 （廣州音）	焱	yiệm
@@ -35152,7 +35152,7 @@
 （南寧音）	艷	(語)yem
 （南寧音）	艷	(語)yèm
 （南寧音）	艷	yiệm
-（南寧音）	艷	(常)yiến
+（南寧音）	艷	(常)yiến/yến
 （廣州音）	豓	yiệm
 （廣州音）	豔	yiệm
 （台山音）	豔	yiệm
@@ -35161,7 +35161,7 @@
 （南寧音）	豔	(語)yem
 （南寧音）	豔	(語)yèm
 （南寧音）	豔	yiệm
-（南寧音）	豔	(常)yiến
+（南寧音）	豔	(常)yiến/yến
 （廣州音）	醶	yiệm
 （廣州音）	釅	yiệm
 （台山音）	釅	ngiệm
@@ -35176,108 +35176,108 @@
 （廣州音）	𤍢	yiệm
 （廣州音）	𦦨	yiệm
 （廣州音）	𪙊	yiệm
-（廣州音）	㖶	yiên
-（廣州音）	㷑	yiên
-（廣州音）	㸶	yiên
-（廣州音）	䍰	yiên
-（廣州音）	䑍	yiên
-（廣州音）	䗎	yiên
-（廣州音）	䞛	yiên
-（廣州音）	傿	yiên
-（廣州音）	傿	yiến
-（廣州音）	咽	yiên
-（廣州音）	咽	yiến
-（廣州音）	咽	yiết
+（廣州音）	㖶	yiên/yên
+（廣州音）	㷑	yiên/yên
+（廣州音）	㸶	yiên/yên
+（廣州音）	䍰	yiên/yên
+（廣州音）	䑍	yiên/yên
+（廣州音）	䗎	yiên/yên
+（廣州音）	䞛	yiên/yên
+（廣州音）	傿	yiên/yên
+（廣州音）	傿	yiến/yến
+（廣州音）	咽	yiên/yên
+（廣州音）	咽	yiến/yến
+（廣州音）	咽	yiết/yết
 （台山音）	咽	yich
 （台山音）	咽	yiến
 （欽州音）	咽	yiên
-（欽州音）	咽	yiết
-（南寧音）	咽	yiên
-（南寧音）	咽	yiến
-（南寧音）	咽	yiết
+（欽州音）	咽	yiết/yết
+（南寧音）	咽	yiên/yên
+（南寧音）	咽	yiến/yến
+（南寧音）	咽	yiết/yết
 （廣州音）	嫣	yiên
 （台山音）	嫣	yiến
 （欽州音）	嫣	yiên
-（南寧音）	嫣	yiên
-（廣州音）	漹	yiên
+（南寧音）	嫣	yiên/yên
+（廣州音）	漹	yiên/yên
 （廣州音）	漹	yiền
-（南寧音）	漹	yiên
-（廣州音）	烟	yiên
-（廣州音）	焉	yiên
+（南寧音）	漹	yiên/yên
+（廣州音）	烟	yiên/yên
+（廣州音）	焉	yiên/yên
 （廣州音）	焉	yiền
 （台山音）	焉	yiến
 （台山音）	焉	yiền
 （欽州音）	焉	yiên
 （欽州音）	焉	yiền
-（南寧音）	焉	yiên
+（南寧音）	焉	yiên/yên
 （南寧音）	焉	yiền
-（廣州音）	焑	yiên
-（廣州音）	煙	yiên
+（廣州音）	焑	yiên/yên
+（廣州音）	煙	yiên/yên
 （台山音）	煙	yiến
 （欽州音）	煙	yiên
-（南寧音）	煙	yiên
-（廣州音）	燕	yiên
-（廣州音）	燕	yiến
+（南寧音）	煙	yiên/yên
+（廣州音）	燕	yiên/yên
+（廣州音）	燕	yiến/yến
 （台山音）	燕	yiến
 （台山音）	燕	yiễn
 （欽州音）	燕	yiên
 （欽州音）	燕	yiến
-（南寧音）	燕	yiên
-（南寧音）	燕	(白)yiển
-（南寧音）	燕	yiến
-（廣州音）	珚	yiên
-（廣州音）	篶	yiên
-（廣州音）	胭	yiên
+（南寧音）	燕	yiên/yên
+（南寧音）	燕	(白)yiển/yển
+（南寧音）	燕	yiến/yến
+（廣州音）	珚	yiên/yên
+（廣州音）	篶	yiên/yên
+（廣州音）	胭	yiên/yên
 （台山音）	胭	yiến
 （欽州音）	胭	yiên
-（南寧音）	胭	yiên
-（廣州音）	臙	yiên
+（南寧音）	胭	yiên/yên
+（廣州音）	臙	yiên/yên
 （台山音）	臙	yiến
-（南寧音）	臙	yiên
-（廣州音）	菸	yiên
+（南寧音）	臙	yiên/yên
+（廣州音）	菸	yiên/yên
 （台山音）	菸	yiến
 （台山音）	菸	í
 （欽州音）	菸	yiên
-（南寧音）	菸	yiên
-（廣州音）	蔫	yiên
+（南寧音）	菸	yiên/yên
+（廣州音）	蔫	yiên/yên
 （台山音）	蔫	yiến
 （欽州音）	蔫	yiên
-（南寧音）	蔫	(語)yiên
+（南寧音）	蔫	(語)yiên/yên
 （南寧音）	蔫	(語)léo
 （南寧音）	蔫	niên
-（廣州音）	鄢	yiên
+（廣州音）	鄢	yiên/yên
 （台山音）	鄢	yiền
 （欽州音）	鄢	yiên
-（南寧音）	鄢	yiên
-（廣州音）	驠	yiên
-（廣州音）	驠	yiến
+（南寧音）	鄢	yiên/yên
+（廣州音）	驠	yiên/yên
+（廣州音）	驠	yiến/yến
 （廣州音）	鴛	oan
-（廣州音）	鴛	yiên
+（廣州音）	鴛	yiên/yên
 （台山音）	鴛	oán
 （欽州音）	鴛	yiên
 （南寧音）	鴛	oan
 （廣州音）	㫃	yiển
-（廣州音）	䤷	yiển
+（廣州音）	䤷	yiển/yển
 （廣州音）	兗	yiển
 （廣州音）	兗	yiễn
 （台山音）	兗	oản
 （欽州音）	兗	yiển
 （南寧音）	兗	yiễn
-（廣州音）	匽	yiển
+（廣州音）	匽	yiển/yển
 （台山音）	匽	yiển
-（廣州音）	堰	yiển
+（廣州音）	堰	yiển/yển
 （台山音）	堰	yiển
 （欽州音）	堰	yiến
-（南寧音）	堰	yiến
-（廣州音）	墕	yiển
-（南寧音）	墕	yiến
-（廣州音）	嬊	yiển
-（廣州音）	嬿	yiến
-（廣州音）	嬿	yiển
-（南寧音）	嬿	yiến
-（廣州音）	巚	yiển
-（廣州音）	愝	yiển
-（廣州音）	椻	yiển
+（南寧音）	堰	yiến/yến
+（廣州音）	墕	yiển/yển
+（南寧音）	墕	yiến/yến
+（廣州音）	嬊	yiển/yển
+（廣州音）	嬿	yiến/yến
+（廣州音）	嬿	yiển/yển
+（南寧音）	嬿	yiến/yến
+（廣州音）	巚	yiển/yển
+（廣州音）	愝	yiển/yển/yển
+（廣州音）	椻	yiển/yển
 （廣州音）	椼	yiển
 （廣州音）	椼	yiễn
 （廣州音）	演	yiển
@@ -35293,70 +35293,70 @@
 （台山音）	硯	ngũn
 （欽州音）	硯	yiền
 （南寧音）	硯	yiện
-（廣州音）	蝘	yiển
+（廣州音）	蝘	yiển/yển
 （台山音）	蝘	yiển
-（南寧音）	蝘	yiển
-（廣州音）	褗	yiển
-（廣州音）	躽	yiển
+（南寧音）	蝘	yiển/yển
+（廣州音）	褗	yiển/yển
+（廣州音）	躽	yiển/yển
 （欽州音）	躽	ẻn
 （南寧音）	躽	(白)ẻn
-（南寧音）	躽	yiển
-（廣州音）	郾	yiển
+（南寧音）	躽	yiển/yển
+（廣州音）	郾	yiển/yển
 （台山音）	郾	yiển
-（南寧音）	郾	yiển
-（廣州音）	隁	yiển
-（廣州音）	鰋	yiển
-（廣州音）	鶠	yiển
-（南寧音）	鶠	yiển
-（廣州音）	鼴	yiển
+（南寧音）	郾	yiển/yển
+（廣州音）	隁	yiển/yển
+（廣州音）	鰋	yiển/yển
+（廣州音）	鶠	yiển/yển
+（南寧音）	鶠	yiển/yển
+（廣州音）	鼴	yiển/yển
 （台山音）	鼴	yiển
 （欽州音）	鼴	yiển
-（南寧音）	鼴	yiển
-（廣州音）	鼹	yiển
-（廣州音）	𠍾	yiển
+（南寧音）	鼴	yiển/yển
+（廣州音）	鼹	yiển/yển
+（廣州音）	𠍾	yiển/yển
 （廣州音）	𣶹	yiển
 （廣州音）	𤤾	yiển
 （廣州音）	𤦷	yiển
 （廣州音）	𧗠	yiển
-（廣州音）	㬫	yiến
-（廣州音）	㰽	yiến
-（廣州音）	㷼	yiến
-（廣州音）	䞁	yiến
-（廣州音）	䴏	yiến
+（廣州音）	㬫	yiến/yến
+（廣州音）	㰽	yiến/yến
+（廣州音）	㷼	yiến/yến
+（廣州音）	䞁	yiến/yến
+（廣州音）	䴏	yiến/yến
 （通用版）	唁	ngiến
 （通用版）	唁	ngiện
-（廣州音）	唁	yiến
+（廣州音）	唁	yiến/yến
 （廣州音）	唁	yiện
 （台山音）	唁	ngịnh
 （欽州音）	唁	yiền
 （南寧音）	唁	yiện
-（廣州音）	嚥	yiến
+（廣州音）	嚥	yiến/yến
 （台山音）	嚥	yich
 （台山音）	嚥	yiến
 （欽州音）	嚥	yiến
-（南寧音）	嚥	yiến
-（廣州音）	宴	yiến
+（南寧音）	嚥	yiến/yến
+（廣州音）	宴	yiến/yến
 （台山音）	宴	yiến
 （欽州音）	宴	yiến
-（南寧音）	宴	yiến
-（廣州音）	曣	yiến
-（廣州音）	烻	yiến
+（南寧音）	宴	yiến/yến
+（廣州音）	曣	yiến/yến
+（廣州音）	烻	yiến/yến
 （南寧音）	烻	yiện
 （南寧音）	烻	siên
-（廣州音）	觾	yiến
-（廣州音）	讌	yiến
+（廣州音）	觾	yiến/yến
+（廣州音）	讌	yiến/yến
 （台山音）	讌	yiến
-（廣州音）	酀	yiến
-（廣州音）	醼	yiến
+（廣州音）	酀	yiến/yến
+（廣州音）	醼	yiến/yến
 （台山音）	醼	yiến
-（廣州音）	鷰	yiến
+（廣州音）	鷰	yiến/yến
 （台山音）	鷰	yiễn
-（南寧音）	鷰	yiến
-（廣州音）	𣶚	yiến
-（廣州音）	𤒈	yiến
-（廣州音）	𤫇	yiến
-（廣州音）	𥗕	yiến
-（廣州音）	𨯧	yiến
+（南寧音）	鷰	yiến/yến
+（廣州音）	𣶚	yiến/yến
+（廣州音）	𤒈	yiến/yến
+（廣州音）	𤫇	yiến/yến
+（廣州音）	𥗕	yiến/yến
+（廣州音）	𨯧	yiến/yến
 （廣州音）	㘋	yiền
 （南寧音）	㘋	yiền
 （廣州音）	㜣	yiền
@@ -35538,7 +35538,7 @@
 （廣州音）	嵃	yiễn
 （廣州音）	嵃	yiện
 （廣州音）	巘	yiễn
-（南寧音）	巘	(白)yiên
+（南寧音）	巘	(白)yiên/yên
 （南寧音）	巘	yiễn
 （廣州音）	悓	yiễn
 （廣州音）	抁	yiễn
@@ -35591,7 +35591,7 @@
 （廣州音）	彥	yiện
 （台山音）	彥	ngịnh
 （欽州音）	彥	yiền
-（南寧音）	彥	(又)yiến
+（南寧音）	彥	(又)yiến/yến
 （南寧音）	彥	yiện
 （廣州音）	牪	yiện
 （廣州音）	現	yiện
@@ -35610,13 +35610,13 @@
 （南寧音）	莧	yiện
 （廣州音）	覎	yiện
 （台山音）	覎	ngùn
-（南寧音）	覎	yiếm
+（南寧音）	覎	yiếm/yếm
 （廣州音）	誢	yiện
 （通用版）	諺	ngiện
 （廣州音）	諺	yiện
 （台山音）	諺	ngịnh
 （欽州音）	諺	yiền
-（南寧音）	諺	(又)yiến
+（南寧音）	諺	(又)yiến/yến
 （南寧音）	諺	yiện
 （廣州音）	鑧	yiện
 （通用版）	齞	nhiện
@@ -36194,36 +36194,36 @@
 （廣州音）	𦠜	yiệp
 （廣州音）	𨭥	yiệp
 （廣州音）	𪃸	yiệp
-（廣州音）	䊦	yiết
+（廣州音）	䊦	yiết/yết
 （欽州音）	䊦	ét
 （南寧音）	䊦	(白)ét
-（南寧音）	䊦	yiết
-（廣州音）	䥟	yiết
-（廣州音）	䭇	yiết
-（廣州音）	噎	yiết
+（南寧音）	䊦	yiết/yết
+（廣州音）	䥟	yiết/yết
+（廣州音）	䭇	yiết/yết
+（廣州音）	噎	yiết/yết
 （台山音）	噎	yich
 （台山音）	噎	ât
 （欽州音）	噎	et
-（欽州音）	噎	yiết
+（欽州音）	噎	yiết/yết
 （欽州音）	噎	ẹt
 （南寧音）	噎	(白)ét
-（南寧音）	噎	yiết
+（南寧音）	噎	yiết/yết
 （廣州音）	謁	khiết
-（廣州音）	謁	yiết
+（廣州音）	謁	yiết/yết
 （台山音）	謁	yich
-（欽州音）	謁	yiết
-（南寧音）	謁	yiết
+（欽州音）	謁	yiết/yết
+（南寧音）	謁	yiết/yết
 （廣州音）	黦	oát
 （廣州音）	黦	vât
-（廣州音）	黦	yiết
-（南寧音）	黦	yiết
+（廣州音）	黦	yiết/yết
+（南寧音）	黦	yiết/yết
 （南寧音）	黦	(語)yot
 （南寧音）	黦	oát
 （南寧音）	黦	(又)vât
 （廣州音）	齧	ngiệt
 （廣州音）	齧	ngạt
 （廣州音）	齧	niệp
-（廣州音）	齧	yiết
+（廣州音）	齧	yiết/yết
 （廣州音）	齧	yiệt
 （台山音）	齧	ngạt
 （欽州音）	齧	niệt
@@ -36290,7 +36290,7 @@
 （廣州音）	蛪	khiết
 （廣州音）	蛪	yiệt
 （廣州音）	蠮	yiệt
-（南寧音）	蠮	yiết
+（南寧音）	蠮	yiết/yết
 （廣州音）	钀	ngãy/ngễ
 （廣州音）	钀	yiệt
 （廣州音）	闑	yiệt
@@ -37837,9 +37837,9 @@
 （廣州音）	亐	ư
 （廣州音）	唹	ư
 （廣州音）	扜	ư
-（廣州音）	扵	u
+（廣州音）	扵	u/vu
 （廣州音）	扵	ư
-（廣州音）	於	u
+（廣州音）	於	u/vu
 （廣州音）	於	yừ
 （廣州音）	於	ư
 （台山音）	於	ú
@@ -37847,7 +37847,7 @@
 （台山音）	於	í
 （欽州音）	於	y
 （南寧音）	於	ư
-（南寧音）	於	u
+（南寧音）	於	u/vu
 （廣州音）	旕	ư
 （廣州音）	杅	yừ
 （廣州音）	杅	ư
@@ -37865,7 +37865,7 @@
 （台山音）	瘀	ỉ
 （欽州音）	瘀	y
 （南寧音）	瘀	ử
-（廣州音）	盓	u
+（廣州音）	盓	u/vu
 （廣州音）	盓	ư
 （廣州音）	穻	yữ
 （廣州音）	穻	ư
@@ -37900,7 +37900,7 @@
 （欽州音）	邘	yì
 （南寧音）	邘	yừ
 （廣州音）	酑	ư
-（廣州音）	陓	u
+（廣州音）	陓	u/vu
 （廣州音）	陓	ư
 （廣州音）	鯲	ư
 （廣州音）	傴	ử
@@ -39199,8 +39199,8 @@
 （廣州音）	乙	oát
 （廣州音）	乙	yoạt
 （台山音）	乙	oat
-（欽州音）	乙	yiết
-（南寧音）	乙	(又)yiết
+（欽州音）	乙	yiết/yết
+（南寧音）	乙	(又)yiết/yết
 （南寧音）	乙	oát
 （廣州音）	乚	oát
 （廣州音）	乚	yoạt
@@ -50819,14 +50819,14 @@
 （台山音）	悟	ṇg
 （欽州音）	悟	ǹg
 （南寧音）	悟	ṇg
-（廣州音）	捂	ủ
+（廣州音）	捂	ủ/vủ
 （廣州音）	捂	ṇg
 （台山音）	捂	ṇg
 （南寧音）	捂	ṇg
-（廣州音）	摀	ủ
+（廣州音）	摀	ủ/vủ
 （廣州音）	摀	ṇg
 （台山音）	摀	ṇg
-（欽州音）	摀	ủ
+（欽州音）	摀	ủ/vủ
 （南寧音）	摀	ṇg
 （廣州音）	晤	ṇg
 （台山音）	晤	ṇg
@@ -52617,13 +52617,13 @@
 （廣州音）	馤	ói
 （廣州音）	鱫	ói
 （廣州音）	僫	óc
-（廣州音）	噁	ú
+（廣州音）	噁	ú/vú
 （廣州音）	噁	óc
 （台山音）	噁	oc
 （欽州音）	噁	óc
 （南寧音）	噁	óc
 （南寧音）	噁	óc
-（南寧音）	噁	ú
+（南寧音）	噁	ú/vú
 （廣州音）	堊	óc
 （台山音）	堊	oc
 （欽州音）	堊	óc
@@ -52631,7 +52631,7 @@
 （廣州音）	悪	óc
 （廣州音）	琧	óc
 （廣州音）	肟	óc
-（台山音）	肟	ú
+（台山音）	肟	vú
 （南寧音）	肟	óc
 （南寧音）	肟	(又)u
 （廣州音）	蝁	óc
@@ -52735,12 +52735,12 @@
 （廣州音）	圫	ố
 （南寧音）	圫	ố
 （通用版）	塢	áu
-（廣州音）	塢	ủ
+（廣州音）	塢	ủ/vủ
 （廣州音）	塢	ố
-（台山音）	塢	ú
+（台山音）	塢	vú
 （台山音）	塢	áo
-（欽州音）	塢	ủ
-（南寧音）	塢	u
+（欽州音）	塢	ủ/vủ
+（南寧音）	塢	u/vu
 （廣州音）	墺	ố
 （欽州音）	墺	yuc
 （欽州音）	墺	ấu
@@ -62814,18 +62814,18 @@
 （南寧音）	挖	(文)vát
 （南寧音）	挖	(白)vét
 （廣州音）	撶	va
-（廣州音）	汙	u
+（廣州音）	汙	u/vu
 （廣州音）	汙	va
-（台山音）	汙	ú
-（欽州音）	汙	u
+（台山音）	汙	vú
+（欽州音）	汙	u/vu
 （欽州音）	汙	yì
-（南寧音）	汙	u
-（廣州音）	污	u
+（南寧音）	汙	u/vu
+（廣州音）	污	u/vu
 （廣州音）	污	va
-（廣州音）	污	ú
-（台山音）	污	ú
-（欽州音）	污	u
-（南寧音）	污	u
+（廣州音）	污	ú/vú
+（台山音）	污	vú
+（欽州音）	污	u/vu
+（南寧音）	污	u/vu
 （廣州音）	溛	va
 （廣州音）	漥	va
 （廣州音）	畖	va
@@ -62907,7 +62907,7 @@
 （欽州音）	樺	và
 （南寧音）	樺	và
 （廣州音）	蕐	và
-（廣州音）	釫	u
+（廣州音）	釫	u/vu
 （廣州音）	釫	và
 （廣州音）	驊	và
 （台山音）	驊	và
@@ -64546,66 +64546,66 @@
 （欽州音）	旺	vòng
 （南寧音）	旺	vọng
 （廣州音）	曂	vọng
-（廣州音）	㢪	u
-（廣州音）	㮧	u
-（廣州音）	䖚	u
-（廣州音）	䡧	u
-（廣州音）	嗚	u
-（台山音）	嗚	ú
-（欽州音）	嗚	u
+（廣州音）	㢪	u/vu
+（廣州音）	㮧	u/vu
+（廣州音）	䖚	u/vu
+（廣州音）	䡧	u/vu
+（廣州音）	嗚	u/vu
+（台山音）	嗚	vú
+（欽州音）	嗚	u/vu
 （南寧音）	嗚	(語)ô
 （南寧音）	嗚	(白)ố
-（南寧音）	嗚	u
-（廣州音）	圬	u
-（台山音）	圬	ú
-（南寧音）	圬	u
-（廣州音）	弙	u
-（廣州音）	杇	u
-（廣州音）	歍	u
-（廣州音）	汚	u
-（台山音）	汚	ú
-（廣州音）	洿	u
-（欽州音）	洿	u
-（南寧音）	洿	u
-（廣州音）	烏	u
-（台山音）	烏	ú
-（欽州音）	烏	u
-（南寧音）	烏	u
-（廣州音）	窏	u
-（廣州音）	螐	u
-（廣州音）	鄔	u
-（台山音）	鄔	ú
-（欽州音）	鄔	u
-（南寧音）	鄔	u
-（廣州音）	鎢	u
-（台山音）	鎢	ú
-（台山音）	鎢	ủ
-（欽州音）	鎢	u
-（南寧音）	鎢	u
-（廣州音）	靰	u
-（台山音）	靰	ú
-（南寧音）	靰	u
-（廣州音）	鰞	u
-（廣州音）	鴮	u
-（廣州音）	𠌥	u
-（廣州音）	𠌥	ú
+（南寧音）	嗚	u/vu
+（廣州音）	圬	u/vu
+（台山音）	圬	vú
+（南寧音）	圬	u/vu
+（廣州音）	弙	u/vu
+（廣州音）	杇	u/vu
+（廣州音）	歍	u/vu
+（廣州音）	汚	u/vu
+（台山音）	汚	vú
+（廣州音）	洿	u/vu
+（欽州音）	洿	u/vu
+（南寧音）	洿	u/vu
+（廣州音）	烏	u/vu
+（台山音）	烏	vú
+（欽州音）	烏	u/vu
+（南寧音）	烏	u/vu
+（廣州音）	窏	u/vu
+（廣州音）	螐	u/vu
+（廣州音）	鄔	u/vu
+（台山音）	鄔	vú
+（欽州音）	鄔	u/vu
+（南寧音）	鄔	u/vu
+（廣州音）	鎢	u/vu
+（台山音）	鎢	vú
+（台山音）	鎢	vủ
+（欽州音）	鎢	u/vu
+（南寧音）	鎢	u/vu
+（廣州音）	靰	u/vu
+（台山音）	靰	vú
+（南寧音）	靰	u/vu
+（廣州音）	鰞	u/vu
+（廣州音）	鴮	u/vu
+（廣州音）	𠌥	u/vu
+（廣州音）	𠌥	vú
 （南寧音）	𠌥	(又)u
-（南寧音）	𠌥	ú
-（廣州音）	䃖	ủ
-（廣州音）	䛩	ủ
-（廣州音）	嵨	ủ
-（廣州音）	溩	ủ
-（廣州音）	瑦	ủ
+（南寧音）	𠌥	vú
+（廣州音）	䃖	ủ/vủ
+（廣州音）	䛩	ủ/vủ
+（廣州音）	嵨	ủ/vủ
+（廣州音）	溩	ủ/vủ
+（廣州音）	瑦	ủ/vủ
 （廣州音）	祜	vụ
-（廣州音）	祜	ủ
+（廣州音）	祜	ủ/vủ
 （台山音）	祜	phụ
-（台山音）	祜	ú
+（台山音）	祜	vú
 （欽州音）	祜	phù
-（南寧音）	祜	ủ
-（廣州音）	隖	ủ
-（廣州音）	𧙖	ủ
-（廣州音）	䜑	ú
-（廣州音）	𨉼	ú
+（南寧音）	祜	ủ/vủ
+（廣州音）	隖	ủ/vủ
+（廣州音）	𧙖	ủ/vủ
+（廣州音）	䜑	ú/vú
+（廣州音）	𨉼	ú/vú
 （廣州音）	㗅	vù
 （廣州音）	㝬	vù
 （廣州音）	㯛	vù
@@ -64662,7 +64662,7 @@
 （欽州音）	胡	phù
 （南寧音）	胡	ù
 （廣州音）	葫	vù
-（台山音）	葫	ú
+（台山音）	葫	vú
 （欽州音）	葫	phù
 （南寧音）	葫	(語)khồ
 （南寧音）	葫	ù
