--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -3947,10 +3947,10 @@
 頁	yiệp
 曄	yiệp
 燁	yiệp
-咽	yiết
-噎	yiết
-謁	yiết
-乙	yiết
+咽	yiết/yết
+噎	yiết/yết
+謁	yiết/yết
+乙	yiết/yết
 抴	yiệt
 拽	yiệt
 穴	yiệt
