--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -5656,32 +5656,32 @@
 譯	yịch
 驛	yịch
 釴	yịch
-㤿	yiêm
-奄	yiêm
-崦	yiêm
-懨	yiêm
-淹	yiêm
-腌	(書)yiêm
-醃	(書)yiêm
-閹	yiêm
-㜝	yiểm
-龑	yiểm
-厴	yiểm
-奄	yiểm
-弇	yiểm
-掩	yiểm
+㤿	yiêm/yêm
+奄	yiêm/yêm
+崦	yiêm/yêm
+懨	yiêm/yêm
+淹	yiêm/yêm
+腌	(書)yiêm/yêm
+醃	(書)yiêm/yêm
+閹	yiêm/yêm
+㜝	yiểm/yểm
+龑	yiểm/yểm
+厴	yiểm/yểm
+奄	yiểm/yểm
+弇	yiểm/yểm
+掩	yiểm/yểm
 檐	(白)yiểm
 簷	(白)yiểm
-渰	yiểm
+渰	yiểm/yểm
 演	(習)yiểm
-罨	yiểm
-魘	yiểm
-黶	yiểm
-𥀬	yiểm
-俺	yiếm
-厭	yiếm
-覎	yiếm
-饜	yiếm
+罨	yiểm/yểm
+魘	yiểm/yểm
+黶	yiểm/yểm
+𥀬	yiểm/yểm
+俺	yiếm/yếm
+厭	yiếm/yếm
+覎	yiếm/yếm
+饜	yiếm/yếm
 嚴	yiềm
 儼	(常)yiềm
 呥	yiềm
@@ -5716,46 +5716,46 @@
 艷	yiệm
 豔	yiệm
 釅	yiệm
-咽	yiên
-嫣	yiên
-殷	yiên
-湮	(又)yiên
-漹	yiên
-煙	yiên
-菸	yiên
-焉	yiên
-燕	yiên
-胭	yiên
-臙	yiên
-蔫	(語)yiên
-鄢	yiên
-閼	yiên
-巘	(白)yiên
-偃	yiển
+咽	yiên/yên
+嫣	yiên/yên
+殷	yiên/yên
+湮	(又)yiên/yên
+漹	yiên/yên
+煙	yiên/yên
+菸	yiên/yên
+焉	yiên/yên
+燕	yiên/yên
+胭	yiên/yên
+臙	yiên/yên
+蔫	(語)yiên/yên
+鄢	yiên/yên
+閼	yiên/yên
+巘	(白)yiên/yên
+偃	yiển/yển
 戭	yiển
 毽	(訓)yiển
 演	(書)yiển
-燕	(白)yiển
-蝘	yiển
+燕	(白)yiển/yển
+蝘	yiển/yển
 衍	yiển
-躽	yiển
-郾	yiển
-鼴	yiển
+躽	yiển/yển
+郾	yiển/yển
+鼴	yiển/yển
 縯	yiển
-鶠	yiển
-咽	yiến
-嚥	yiến
-堰	yiến
-墕	yiến
-嬿	yiến
-宴	yiến
-彥	(又)yiến
-灩	(又)yiến
-燕	yiến
-艷	(常)yiến
-豔	(常)yiến
-諺	(又)yiến
-鷰	yiến
+鶠	yiển/yển
+咽	yiến/yến
+嚥	yiến/yến
+堰	yiến/yến
+墕	yiến/yến
+嬿	yiến/yến
+宴	yiến/yến
+彥	(又)yiến/yến
+灩	(又)yiến/yến
+燕	yiến/yến
+艷	(常)yiến/yến
+豔	(常)yiến/yến
+諺	(又)yiến/yến
+鷰	yiến/yến
 㘋	yiền
 㳄	yiền
 伭	yiền
@@ -5874,13 +5874,13 @@
 䈎	yiệp
 頁	yiệp
 饁	yiệp
-䊦	yiết
-乙	(又)yiết
-咽	yiết
-噎	yiết
-蠮	yiết
-謁	yiết
-黦	yiết
+䊦	yiết/yết
+乙	(又)yiết/yết
+咽	yiết/yết
+噎	yiết/yết
+蠮	yiết/yết
+謁	yiết/yết
+黦	yiết/yết
 抴	(又)yiệt
 拽	(又)yiệt
 熱	yiệt
@@ -12457,23 +12457,23 @@
 旺	vọng
 暀	vọng
 王	vọng
-烏	u
-於	u
-嗚	u
-圬	u
-塢	u
-汙	u
-污	u
-洿	u
-肟	(又)u
-鄔	u
-鎢	u
-靰	u
-𠌥	(又)u
-祜	ủ
-噁	ú
-惡	ú
-𠌥	ú
+烏	u/vu
+於	u/vu
+嗚	u/vu
+圬	u/vu
+塢	u/vu
+汙	u/vu
+污	u/vu
+洿	u/vu
+肟	(又)u/vu
+鄔	u/vu
+鎢	u/vu
+靰	u/vu
+𠌥	(又)u/vu
+祜	ủ/vủ
+噁	ú/vú
+惡	ú/vú
+𠌥	ú/vú
 乎	ù
 和	ù
 壺	ù
@@ -14258,7 +14258,7 @@
 小便	sliểu biện
 便是	biện sị
 即便	chich biện
-便宴	biện yiến
+便宴	biện yiến/biện yến
 便道	biện độ
 便宜	piền nì
 便給	piền khâp
@@ -14734,19 +14734,19 @@
 貓咪	mao mi
 亂哄哄	loạn hung hung
 哄騙	hủng piến
-吞咽	thân yiến
-咽氣	yiến hí
-咽苦吐甜	yiến phổ thố thiềm
-狼吞虎咽	lòng thân phổ yiến
-細嚼慢咽	sláy chước mạn yiến/slế chước mạn yiến
-咽喉	yiên hầu
-鼻咽	bị yiên
-鼻咽癌	bị yiên ngàm
-哽咽	kẳng yiết
-咽泣	yiết yâp
-嗚咽	u yiết
-悲咽	bi yiết
-填咽	thiền yiết
+吞咽	thân yiến/thân yến
+咽氣	yiến hí/yến hí
+咽苦吐甜	yiến phổ thố thiềm/yến phổ thố thiềm
+狼吞虎咽	lòng thân phổ yiến/lòng thân phổ yến
+細嚼慢咽	sláy chước mạn yiến/slế chước mạn yến
+咽喉	yiên hầu/yên hầu
+鼻咽	bị yiên/bị yên
+鼻咽癌	bị yiên ngàm/bị yên ngàm
+哽咽	kẳng yiết/kẳng yết
+咽泣	yiết yâp/yết yâp
+嗚咽	u yiết//vu yết
+悲咽	bi yiết/bi yết
+填咽	thiền yiết/thiền yết
 咯血	khách hoát
 咯痰	khách thàm
 咯魚翅	khách yừ xí
@@ -14851,7 +14851,7 @@
 嗆咳	xương khât
 嗆着	xương chược
 吃飯嗆着	hếc phạn xương chược
-油煙嗆人	yầu yiên xướng yần
+油煙嗆人	yầu yiên xướng yần/yầu yên xướng yần
 嗆人	xướng yần
 夠嗆	kấu xướng
 嘀嗒	đich đap
@@ -14964,13 +14964,13 @@
 奇偶	ki ngẫu
 五十有奇	ñg sập yẫu ki
 六十有奇	lục sập yẫu ki
-奄然	yiểm yiền
-奄有	yiểm yẫu
-奄忽	yiểm phât
-奄有四方	yiểm yẫu slí phong
-奄奄	yiêm yiêm
-奄奄一息	yiêm yiêm yât slich
-氣息奄奄	hí slich yiêm yiêm
+奄然	yiểm yiền/yểm yiền
+奄有	yiểm yẫu/yểm yẫu
+奄忽	yiểm phât/yểm phât
+奄有四方	yiểm yẫu slí phong/yểm yẫu slí phong
+奄奄	yiêm yiêm/yêm yêm
+奄奄一息	yiêm yiêm yât slich/yêm yêm yât slich
+氣息奄奄	hí slich yiêm yiêm/hí slich yêm yêm
 喜好	hỉ hố
 嗜好	sí hố
 愛好	ói hố
@@ -15422,13 +15422,13 @@
 恫瘝	thung quan
 恫瘝乃身	thung quan nãi sân
 恫瘝在抱	thung quan chọi pỗ
-可惡	hỏ ú
-厭惡	yiếm ú
-好惡	hố ú
-深惡痛絕	sâm ú thúng choạt
-羞惡之心	slâu ú chi slâm
-諱惡	ụy ú
-諱惡不悛	ụy ú bât sloan
+可惡	hỏ ú/hỏ vú
+厭惡	yiếm ú/yếm vú
+好惡	hố ú/hố vú
+深惡痛絕	sâm ú thúng choạt/sâm vú thúng choạt
+羞惡之心	slâu ú chi slâm/slâu vú chi slâm
+諱惡	ụy ú/ụy vú
+諱惡不悛	ụy ú bât sloan/ụy vú bât sloan
 善惡	siện óc
 惡霸	óc bá
 惡心	óc slâm
@@ -15988,7 +15988,7 @@
 正月	chinh yoạt
 新正	slân chinh
 月氏	yoạt chi
-閼氏	yiên chi
+閼氏	yiên chi/yên chi
 氐宿	đay slấu/đê slấu
 氐族	đay chục/đê chục
 氐羌	đay khương/đê khương
@@ -16219,14 +16219,14 @@
 爲民請命	ụy mần xỉnh mịnh
 捨身爲國	sẻ sân ụy kóc
 爲虎添翼	ụy phổ thiêm yịch
-焉能	yiên nằng
-焉得	yiên đăc
-焉得虎子	yiên đăc phổ chủ
-焉得虎子	yiên đăc phổ chỉ
-有厚望焉	yẫu hẫu mọng yiên
-焉能如此	yiên nằng yừ xủ
-焉能如此	yiên nằng yừ xỉ
-焉用	yiên yụng
+焉能	yiên nằng/yên nằng
+焉得	yiên đăc/yên đăc
+焉得虎子	yiên đăc phổ chủ/yên đăc phổ chủ
+焉得虎子	yiên đăc phổ chỉ/yên đăc phổ chỉ
+有厚望焉	yẫu hẫu mọng yiên/yẫu hẫu mọng yên
+焉能如此	yiên nằng yừ xủ/yên nằng yừ xủ
+焉能如此	yiên nằng yừ xỉ/yên nằng yừ xỉ
+焉用	yiên yụng/yên yụng
 語焉不詳	yữ yiền bât xường
 心不在焉	slâm bât chọi yiền
 罪莫大焉	chội mọc đại yiền
@@ -16242,25 +16242,25 @@
 燙衫板	thóng sam bản
 熨貼	vât thiếp
 熨帖	vât thiếp
-燕子	yiến chủ
-燕子	yiến chỉ
-燕窩	yiến vo
-勞燕分飛	lồ yiến phân phi
-燕語鶯聲	yiến yữ ăng sênh
-燕好	yiến hổ
-燕侶	yiến lữ
-燕麥	yiến mặc
-燕爾	yiến yĩ
-燕尾服	yiến mĩ phục
-燕妒鶯慚	yiến độ ăng xàm
-燕雀相賀	yiến xước slương họ
-燕雀處堂	yiến xước xữ thòng
-燕巢幕上	yiến xào mọc sượng
-燕雀	yiến xước
-燕京	yiên kinh
-燕國	yiên kóc
-燕山	yiên san
-燕趙	yiên chiệu
+燕子	yiến chủ/yến chủ
+燕子	yiến chỉ/yến chỉ
+燕窩	yiến vo/yến vo
+勞燕分飛	lồ yiến phân phi/lồ yến phân phi
+燕語鶯聲	yiến yữ ăng sênh/yến yữ ăng sênh
+燕好	yiến hổ/yến hổ
+燕侶	yiến lữ/yến lữ
+燕麥	yiến mặc/yến mặc
+燕爾	yiến yĩ/yến yĩ
+燕尾服	yiến mĩ phục/yến mĩ phục
+燕妒鶯慚	yiến độ ăng xàm/yến độ ăng xàm
+燕雀相賀	yiến xước slương họ/yến xước slương họ
+燕雀處堂	yiến xước xữ thòng/yến xước xữ thòng
+燕巢幕上	yiến xào mọc sượng/yến xào mọc sượng
+燕雀	yiến xước/yến xước
+燕京	yiên kinh/yên kinh
+燕國	yiên kóc/yên kóc
+燕山	yiên san/yên san
+燕趙	yiên chiệu/yên chiệu
 犄角	ki kóc
 犄角旮旯	ki kóc khá lá
 犄角之勢	ki kóc chi sáy/ki kóc chi sế
@@ -18229,7 +18229,7 @@
 造船	chộ soàn
 造詣	chộ ngạy/chộ ngệ
 造訪	chộ phỏng
-造謁	chộ yiết
+造謁	chộ yiết/chộ yết
 深造	sâm chộ
 登峰造極	đăng phung chộ kịch
 莫邪	mọc yè
@@ -18886,7 +18886,7 @@
 碽碽聲	kùng kùng sênh
 響碽碽	hưởng khung khung
 滾䠡䠡	quẩn chò chò
-煙嗷嗷	yiên ngáo ngáo
+煙嗷嗷	yiên ngáo ngáo/yên ngáo ngáo
 毛㗂㗂	mồ slằng slằng
 戇居居	ngóng kư kư
 流嗲嗲	lầu đè đè
@@ -19006,8 +19006,8 @@
 識得	sich đăc
 知到	chi đố
 差伙	xa phỏ
-燒菸	siêu yiên
-食菸	sịch yiên
+燒菸	siêu yiên/siêu yên
+食菸	sịch yiên/sịch yên
 食渣米	sịch ya mãy/sịch ya mễ
 蘭	lan
 蘭公	lan kung
@@ -19080,7 +19080,7 @@
 㗾㗾聲	hừa hửa sênh
 㗾哆	hừa đưa
 桶裙	thủng khuần
-㤿憸	yiêm chiêm
+㤿憸	yiêm chiêm/yêm chiêm
 腌臢	âp châp
 癡戇戇	xi ngăng ngăng
 等下子	đẳng hã chỉ
