--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -14471,68 +14471,68 @@
 𤥿	yịch
 𦏵	yịch
 𦐂	yịch
-㤿	yiêm
-㦔	yiêm
-䅧	yiêm
-偣	yiêm
-厭	yiêm
-噞	yiêm
-奄	yiêm
-嬮	yiêm
-崦	yiêm
-嶖	yiêm
-懕	yiêm
-懨	yiêm
-淊	yiêm
-淹	yiêm
-渰	yiêm
-猒	yiêm
-硽	yiêm
-腌	yiêm
-醃	yiêm
-閹	yiêm
-饜	yiêm
-𣸰	yiêm
-𦝡	yiêm
-𦞴	yiêm
-㭺	yiểm
-㱘	yiểm
-䄋	yiểm
-䣍	yiểm
+㤿	yiêm/yêm
+㦔	yiêm/yêm
+䅧	yiêm/yêm
+偣	yiêm/yêm
+厭	yiêm/yêm
+噞	yiêm/yêm
+奄	yiêm/yêm
+嬮	yiêm/yêm
+崦	yiêm/yêm
+嶖	yiêm/yêm
+懕	yiêm/yêm
+懨	yiêm/yêm
+淊	yiêm/yêm
+淹	yiêm/yêm
+渰	yiêm/yêm
+猒	yiêm/yêm
+硽	yiêm/yêm
+腌	yiêm/yêm
+醃	yiêm/yêm
+閹	yiêm/yêm
+饜	yiêm/yêm
+𣸰	yiêm/yêm
+𦝡	yiêm/yêm
+𦞴	yiêm/yêm
+㭺	yiểm/yểm
+㱘	yiểm/yểm
+䄋	yiểm/yểm
+䣍	yiểm/yểm
 䲓	yiểm
-偃	yiểm
-剦	yiểm
-厴	yiểm
+偃	yiểm/yểm
+剦	yiểm/yểm
+厴	yiểm/yểm
 噞	yiểm
-奄	yiểm
-广	yiểm
-弇	yiểm
-掩	yiểm
-揜	yiểm
-晻	yiểm
-檿	yiểm
-渰	yiểm
-猒	yiểm
-罨	yiểm
-裺	yiểm
-酓	yiểm
+奄	yiểm/yểm
+广	yiểm/yểm
+弇	yiểm/yểm
+掩	yiểm/yểm
+揜	yiểm/yểm
+晻	yiểm/yểm
+檿	yiểm/yểm
+渰	yiểm/yểm
+猒	yiểm/yểm
+罨	yiểm/yểm
+裺	yiểm/yểm
+酓	yiểm/yểm
 隒	yiểm
-靨	yiểm
-魘	yiểm
-黤	yiểm
-黭	yiểm
-黶	yiểm
-龑	yiểm
-𥀬	yiểm
-𦝡	yiểm
-㛪	yiếm
-䛳	yiếm
-俺	yiếm
-厭	yiếm
-嬮	yiếm
-猒	yiếm
-酓	yiếm
-饜	yiếm
+靨	yiểm/yểm
+魘	yiểm/yểm
+黤	yiểm/yểm
+黭	yiểm/yểm
+黶	yiểm/yểm
+龑	yiểm/yểm
+𥀬	yiểm/yểm
+𦝡	yiểm/yểm
+㛪	yiếm/yếm
+䛳	yiếm/yếm
+俺	yiếm/yếm
+厭	yiếm/yếm
+嬮	yiếm/yếm
+猒	yiếm/yếm
+酓	yiếm/yếm
+饜	yiếm/yếm
 㶄	yiềm
 㿕	yiềm
 䀋	yiềm
@@ -14637,93 +14637,93 @@
 𤍢	yiệm
 𦦨	yiệm
 𪙊	yiệm
-㖶	yiên
-㷑	yiên
-㸶	yiên
-䍰	yiên
-䑍	yiên
-䗎	yiên
-䞛	yiên
-傿	yiên
-咽	yiên
-嫣	yiên
-殷	yiên
-湮	yiên
-漹	yiên
-烟	yiên
-焉	yiên
-焑	yiên
-煙	yiên
-燕	yiên
-珚	yiên
-篶	yiên
-胭	yiên
-臙	yiên
-菸	yiên
-蔫	yiên
-鄢	yiên
-閼	yiên
-驠	yiên
-鴛	yiên
+㖶	yiên/yên
+㷑	yiên/yên
+㸶	yiên/yên
+䍰	yiên/yên
+䑍	yiên/yên
+䗎	yiên/yên
+䞛	yiên/yên
+傿	yiên/yên
+咽	yiên/yên
+嫣	yiên/yên
+殷	yiên/yên
+湮	yiên/yên
+漹	yiên/yên
+烟	yiên/yên
+焉	yiên/yên
+焑	yiên/yên
+煙	yiên/yên
+燕	yiên/yên
+珚	yiên/yên
+篶	yiên/yên
+胭	yiên/yên
+臙	yiên/yên
+菸	yiên/yên
+蔫	yiên/yên
+鄢	yiên/yên
+閼	yiên/yên
+驠	yiên/yên
+鴛	yiên/yên
 㫃	yiển
-䤷	yiển
-偃	yiển
+䤷	yiển/yển
+偃	yiển/yển
 兗	yiển
-匽	yiển
-堰	yiển
-墕	yiển
-嬊	yiển
-嬿	yiển
+匽	yiển/yển
+堰	yiển/yển
+墕	yiển/yển
+嬊	yiển/yển
+嬿	yiển/yển
 巚	yiển
-愝	yiển
+愝	yiển/yển
 戭	yiển
-椻	yiển
+椻	yiển/yển
 椼	yiển
 毽	yiển
 演	yiển
 硯	yiển
 縯	yiển
-蝘	yiển
+蝘	yiển/yển
 衍	yiển
-褗	yiển
-躽	yiển
-郾	yiển
-隁	yiển
-鰋	yiển
-鶠	yiển
-鼴	yiển
-鼹	yiển
+褗	yiển/yển
+躽	yiển/yển
+郾	yiển/yển
+隁	yiển/yển
+鰋	yiển/yển
+鶠	yiển/yển
+鼴	yiển/yển
+鼹	yiển/yển
 龑	yiển
-𠍾	yiển
+𠍾	yiển/yển
 𣶹	yiển
 𤤾	yiển
 𤦷	yiển
 𧗠	yiển
-㬫	yiến
-㰽	yiến
-㷼	yiến
-䞁	yiến
-䴏	yiến
-傿	yiến
-咽	yiến
-唁	yiến
-嚥	yiến
-嬿	yiến
-宴	yiến
-曣	yiến
-烻	yiến
-燕	yiến
-觾	yiến
-讌	yiến
-酀	yiến
-醼	yiến
-驠	yiến
-鷰	yiến
-𣶚	yiến
-𤒈	yiến
-𤫇	yiến
-𥗕	yiến
-𨯧	yiến
+㬫	yiến/yến
+㰽	yiến/yến
+㷼	yiến/yến
+䞁	yiến/yến
+䴏	yiến/yến
+傿	yiến/yến
+咽	yiến/yến
+唁	yiến/yến
+嚥	yiến/yến
+嬿	yiến/yến
+宴	yiến/yến
+曣	yiến/yến
+烻	yiến/yến
+燕	yiến/yến
+觾	yiến/yến
+讌	yiến/yến
+酀	yiến/yến
+醼	yiến/yến
+驠	yiến/yến
+鷰	yiến/yến
+𣶚	yiến/yến
+𤒈	yiến/yến
+𤫇	yiến/yến
+𥗕	yiến/yến
+𨯧	yiến/yến
 㘋	yiền
 㜣	yiền
 㝚	yiền
@@ -15167,16 +15167,16 @@
 𦠜	yiệp
 𨭥	yiệp
 𪃸	yiệp
-䊦	yiết
-䥟	yiết
-䭇	yiết
-咽	yiết
-喝	yiết
-噎	yiết
-暍	yiết
-謁	yiết
-黦	yiết
-齧	yiết
+䊦	yiết/yết
+䥟	yiết/yết
+䭇	yiết/yết
+咽	yiết/yết
+喝	yiết/yết
+噎	yiết/yết
+暍	yiết/yết
+謁	yiết/yết
+黦	yiết/yết
+齧	yiết/yết
 㜸	yiệt
 㮆	yiệt
 㴪	yiệt
