--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -18846,17 +18846,17 @@
 （廣州音）	怤	phu
 （廣州音）	恗	phu
 （廣州音）	惡	phu
-（廣州音）	惡	u/vu
-（廣州音）	惡	ú/vú
+（廣州音）	惡	vu
+（廣州音）	惡	vú
 （廣州音）	惡	óc
 （台山音）	惡	oc
 （台山音）	惡	vú
 （台山音）	惡	óc
-（欽州音）	惡	u/vu
-（欽州音）	惡	ú/vú
+（欽州音）	惡	vu
+（欽州音）	惡	vú
 （欽州音）	惡	óc
 （南寧音）	惡	óc
-（南寧音）	惡	ú/vú
+（南寧音）	惡	vú
 （廣州音）	懯	phu
 （廣州音）	戯	hý
 （廣州音）	戯	phu
@@ -19063,7 +19063,7 @@
 （南寧音）	滏	phổ
 （廣州音）	滸	hủi
 （廣州音）	滸	phủ
-（廣州音）	滸	ủ/vủ
+（廣州音）	滸	vủ
 （台山音）	滸	hủi
 （台山音）	滸	phủ
 （欽州音）	滸	phủ
@@ -37837,9 +37837,9 @@
 （廣州音）	亐	ư
 （廣州音）	唹	ư
 （廣州音）	扜	ư
-（廣州音）	扵	u/vu
+（廣州音）	扵	vu
 （廣州音）	扵	ư
-（廣州音）	於	u/vu
+（廣州音）	於	vu
 （廣州音）	於	yừ
 （廣州音）	於	ư
 （台山音）	於	ú
@@ -37847,7 +37847,7 @@
 （台山音）	於	í
 （欽州音）	於	y
 （南寧音）	於	ư
-（南寧音）	於	u/vu
+（南寧音）	於	vu
 （廣州音）	旕	ư
 （廣州音）	杅	yừ
 （廣州音）	杅	ư
@@ -37865,7 +37865,7 @@
 （台山音）	瘀	ỉ
 （欽州音）	瘀	y
 （南寧音）	瘀	ử
-（廣州音）	盓	u/vu
+（廣州音）	盓	vu
 （廣州音）	盓	ư
 （廣州音）	穻	yữ
 （廣州音）	穻	ư
@@ -37900,7 +37900,7 @@
 （欽州音）	邘	yì
 （南寧音）	邘	yừ
 （廣州音）	酑	ư
-（廣州音）	陓	u/vu
+（廣州音）	陓	vu
 （廣州音）	陓	ư
 （廣州音）	鯲	ư
 （廣州音）	傴	ử
@@ -50819,14 +50819,14 @@
 （台山音）	悟	ṇg
 （欽州音）	悟	ǹg
 （南寧音）	悟	ṇg
-（廣州音）	捂	ủ/vủ
+（廣州音）	捂	vủ
 （廣州音）	捂	ṇg
 （台山音）	捂	ṇg
 （南寧音）	捂	ṇg
-（廣州音）	摀	ủ/vủ
+（廣州音）	摀	vủ
 （廣州音）	摀	ṇg
 （台山音）	摀	ṇg
-（欽州音）	摀	ủ/vủ
+（欽州音）	摀	vủ
 （南寧音）	摀	ṇg
 （廣州音）	晤	ṇg
 （台山音）	晤	ṇg
@@ -52617,13 +52617,13 @@
 （廣州音）	馤	ói
 （廣州音）	鱫	ói
 （廣州音）	僫	óc
-（廣州音）	噁	ú/vú
+（廣州音）	噁	vú
 （廣州音）	噁	óc
 （台山音）	噁	oc
 （欽州音）	噁	óc
 （南寧音）	噁	óc
 （南寧音）	噁	óc
-（南寧音）	噁	ú/vú
+（南寧音）	噁	vú
 （廣州音）	堊	óc
 （台山音）	堊	oc
 （欽州音）	堊	óc
@@ -52735,12 +52735,12 @@
 （廣州音）	圫	ố
 （南寧音）	圫	ố
 （通用版）	塢	áu
-（廣州音）	塢	ủ/vủ
+（廣州音）	塢	vủ
 （廣州音）	塢	ố
 （台山音）	塢	vú
 （台山音）	塢	áo
-（欽州音）	塢	ủ/vủ
-（南寧音）	塢	u/vu
+（欽州音）	塢	vủ
+（南寧音）	塢	vu
 （廣州音）	墺	ố
 （欽州音）	墺	yuc
 （欽州音）	墺	ấu
@@ -62814,18 +62814,18 @@
 （南寧音）	挖	(文)vát
 （南寧音）	挖	(白)vét
 （廣州音）	撶	va
-（廣州音）	汙	u/vu
+（廣州音）	汙	vu
 （廣州音）	汙	va
 （台山音）	汙	vú
-（欽州音）	汙	u/vu
+（欽州音）	汙	vu
 （欽州音）	汙	yì
-（南寧音）	汙	u/vu
-（廣州音）	污	u/vu
+（南寧音）	汙	vu
+（廣州音）	污	vu
 （廣州音）	污	va
-（廣州音）	污	ú/vú
+（廣州音）	污	vú
 （台山音）	污	vú
-（欽州音）	污	u/vu
-（南寧音）	污	u/vu
+（欽州音）	污	vu
+（南寧音）	污	vu
 （廣州音）	溛	va
 （廣州音）	漥	va
 （廣州音）	畖	va
@@ -62907,7 +62907,7 @@
 （欽州音）	樺	và
 （南寧音）	樺	và
 （廣州音）	蕐	và
-（廣州音）	釫	u/vu
+（廣州音）	釫	vu
 （廣州音）	釫	và
 （廣州音）	驊	và
 （台山音）	驊	và
@@ -64546,66 +64546,66 @@
 （欽州音）	旺	vòng
 （南寧音）	旺	vọng
 （廣州音）	曂	vọng
-（廣州音）	㢪	u/vu
-（廣州音）	㮧	u/vu
-（廣州音）	䖚	u/vu
-（廣州音）	䡧	u/vu
-（廣州音）	嗚	u/vu
+（廣州音）	㢪	vu
+（廣州音）	㮧	vu
+（廣州音）	䖚	vu
+（廣州音）	䡧	vu
+（廣州音）	嗚	vu
 （台山音）	嗚	vú
-（欽州音）	嗚	u/vu
+（欽州音）	嗚	vu
 （南寧音）	嗚	(語)ô
 （南寧音）	嗚	(白)ố
-（南寧音）	嗚	u/vu
-（廣州音）	圬	u/vu
+（南寧音）	嗚	vu
+（廣州音）	圬	vu
 （台山音）	圬	vú
-（南寧音）	圬	u/vu
-（廣州音）	弙	u/vu
-（廣州音）	杇	u/vu
-（廣州音）	歍	u/vu
-（廣州音）	汚	u/vu
+（南寧音）	圬	vu
+（廣州音）	弙	vu
+（廣州音）	杇	vu
+（廣州音）	歍	vu
+（廣州音）	汚	vu
 （台山音）	汚	vú
-（廣州音）	洿	u/vu
-（欽州音）	洿	u/vu
-（南寧音）	洿	u/vu
-（廣州音）	烏	u/vu
+（廣州音）	洿	vu
+（欽州音）	洿	vu
+（南寧音）	洿	vu
+（廣州音）	烏	vu
 （台山音）	烏	vú
-（欽州音）	烏	u/vu
-（南寧音）	烏	u/vu
-（廣州音）	窏	u/vu
-（廣州音）	螐	u/vu
-（廣州音）	鄔	u/vu
+（欽州音）	烏	vu
+（南寧音）	烏	vu
+（廣州音）	窏	vu
+（廣州音）	螐	vu
+（廣州音）	鄔	vu
 （台山音）	鄔	vú
-（欽州音）	鄔	u/vu
-（南寧音）	鄔	u/vu
-（廣州音）	鎢	u/vu
+（欽州音）	鄔	vu
+（南寧音）	鄔	vu
+（廣州音）	鎢	vu
 （台山音）	鎢	vú
 （台山音）	鎢	vủ
-（欽州音）	鎢	u/vu
-（南寧音）	鎢	u/vu
-（廣州音）	靰	u/vu
+（欽州音）	鎢	vu
+（南寧音）	鎢	vu
+（廣州音）	靰	vu
 （台山音）	靰	vú
-（南寧音）	靰	u/vu
-（廣州音）	鰞	u/vu
-（廣州音）	鴮	u/vu
-（廣州音）	𠌥	u/vu
+（南寧音）	靰	vu
+（廣州音）	鰞	vu
+（廣州音）	鴮	vu
+（廣州音）	𠌥	vu
 （廣州音）	𠌥	vú
 （南寧音）	𠌥	(又)u
 （南寧音）	𠌥	vú
-（廣州音）	䃖	ủ/vủ
-（廣州音）	䛩	ủ/vủ
-（廣州音）	嵨	ủ/vủ
-（廣州音）	溩	ủ/vủ
-（廣州音）	瑦	ủ/vủ
+（廣州音）	䃖	vủ
+（廣州音）	䛩	vủ
+（廣州音）	嵨	vủ
+（廣州音）	溩	vủ
+（廣州音）	瑦	vủ
 （廣州音）	祜	vụ
-（廣州音）	祜	ủ/vủ
+（廣州音）	祜	vủ
 （台山音）	祜	phụ
 （台山音）	祜	vú
 （欽州音）	祜	phù
-（南寧音）	祜	ủ/vủ
-（廣州音）	隖	ủ/vủ
-（廣州音）	𧙖	ủ/vủ
-（廣州音）	䜑	ú/vú
-（廣州音）	𨉼	ú/vú
+（南寧音）	祜	vủ
+（廣州音）	隖	vủ
+（廣州音）	𧙖	vủ
+（廣州音）	䜑	vú
+（廣州音）	𨉼	vú
 （廣州音）	㗅	vù
 （廣州音）	㝬	vù
 （廣州音）	㯛	vù
