--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -5664,7 +5664,7 @@
 腌	(書)yiêm/yêm
 醃	(書)yiêm/yêm
 閹	yiêm/yêm
-㜝	yiểm/yểm
+㜝	yiểm
 龑	yiểm/yểm
 厴	yiểm/yểm
 奄	yiểm/yểm
@@ -12457,23 +12457,23 @@
 旺	vọng
 暀	vọng
 王	vọng
-烏	u/vu
-於	u/vu
-嗚	u/vu
-圬	u/vu
-塢	u/vu
-汙	u/vu
-污	u/vu
-洿	u/vu
-肟	(又)u/vu
-鄔	u/vu
-鎢	u/vu
-靰	u/vu
-𠌥	(又)u/vu
-祜	ủ/vủ
-噁	ú/vú
-惡	ú/vú
-𠌥	ú/vú
+烏	vu
+於	vu
+嗚	vu
+圬	vu
+塢	vu
+汙	vu
+污	vu
+洿	vu
+肟	(又)vu
+鄔	vu
+鎢	vu
+靰	vu
+𠌥	(又)vu
+祜	vủ
+噁	vú
+惡	vú
+𠌥	vú
 乎	ù
 和	ù
 壺	ù
