--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -38415,6 +38415,7 @@
 （廣州音）	圉	yữ
 （台山音）	圉	ngũi
 （南寧音）	圉	yữ
+（通用版）	女	nữ
 （廣州音）	女	nũi
 （廣州音）	女	nụi
 （廣州音）	女	nủi
@@ -42706,6 +42707,7 @@
 （台山音）	瞜	lầu
 （南寧音）	瞜	lâu
 （南寧音）	瞜	(又)lầu
+（通用版）	褸	lữ
 （廣州音）	褸	lâu
 （廣州音）	褸	lũi
 （廣州音）	褸	lẫu
@@ -42751,6 +42753,7 @@
 （廣州音）	䱾	lầu
 （台山音）	䱾	lẫu
 （廣州音）	䶉	lầu
+（通用版）	僂	lữ
 （廣州音）	僂	lũi
 （廣州音）	僂	lầu
 （台山音）	僂	lũi
@@ -42815,6 +42818,7 @@
 （欽州音）	溜	lầu
 （南寧音）	溜	lậu
 （南寧音）	溜	liêu
+（通用版）	漊	lữ
 （廣州音）	漊	lầu
 （台山音）	漊	lầu
 （南寧音）	漊	lầu
@@ -42872,6 +42876,8 @@
 （廣州音）	耬	lầu
 （台山音）	耬	lầu
 （南寧音）	耬	lầu
+（）	膢	lừ
+（通用版）	膢	lầu
 （廣州音）	膢	lùi
 （廣州音）	膢	lầu
 （南寧音）	膢	lầu
@@ -43021,6 +43027,7 @@
 （廣州音）	綹	lẫu
 （台山音）	綹	lữu
 （南寧音）	綹	lẫu
+（通用版）	縷	lữ
 （廣州音）	縷	lũi
 （廣州音）	縷	lẫu
 （台山音）	縷	lũi
@@ -43350,6 +43357,7 @@
 （台山音）	娌	lỵ
 （欽州音）	娌	lỉ
 （南寧音）	娌	lĩ
+（通用版）	履	lữ
 （廣州音）	履	lũi
 （廣州音）	履	lỹ
 （台山音）	履	lỹ
@@ -43550,11 +43558,13 @@
 （欽州音）	𨀤	lui
 （南寧音）	𨀤	lôi
 （廣州音）	𨂐	lui
+（通用版）	旅	lữ
 （廣州音）	旅	lúi
 （廣州音）	旅	lũi
 （台山音）	旅	lũi
 （欽州音）	旅	lỉ
 （南寧音）	旅	lữ
+（通用版）	櫚	lữ
 （廣州音）	櫚	lùi
 （廣州音）	櫚	lúi
 （台山音）	櫚	lùi
@@ -43571,6 +43581,7 @@
 （南寧音）	累	lồi
 （南寧音）	累	lỗi
 （南寧音）	累	lội
+（通用版）	膂	lữ
 （廣州音）	膂	lúi
 （廣州音）	膂	lũi
 （台山音）	膂	lũi
@@ -43678,6 +43689,7 @@
 （欽州音）	鐳	lùi
 （南寧音）	鐳	lồi
 （廣州音）	鑘	lùi
+（通用版）	閭	lừ
 （廣州音）	閭	lùi
 （廣州音）	閭	lũi
 （台山音）	閭	lùi
@@ -43696,6 +43708,7 @@
 （台山音）	騾	lùi
 （欽州音）	騾	lò
 （南寧音）	騾	lò
+（通用版）	驢	lừ
 （廣州音）	驢	lùi
 （廣州音）	驢	lồ
 （台山音）	驢	lùi
@@ -43726,6 +43739,7 @@
 （廣州音）	䲎	lũi
 （廣州音）	䲎	nũi
 （廣州音）	䴎	lũi
+（通用版）	侶	lữ
 （廣州音）	侶	lũi
 （台山音）	侶	lũi
 （欽州音）	侶	lỉ
@@ -43739,6 +43753,7 @@
 （南寧音）	儡	lỗi
 （廣州音）	儢	lũi
 （廣州音）	厽	lũi
+（通用版）	呂	lữ
 （廣州音）	呂	lũi
 （台山音）	呂	lũi
 （台山音）	呂	lủi
@@ -43754,6 +43769,7 @@
 （南寧音）	屢	lữ
 （廣州音）	挔	lũi
 （廣州音）	捛	lũi
+（通用版）	梠	lữ
 （廣州音）	梠	lũi
 （南寧音）	梠	lữ
 （廣州音）	櫐	lũi
@@ -43784,8 +43800,10 @@
 （南寧音）	礌	lội
 （廣州音）	礨	lũi
 （廣州音）	祣	lũi
+（通用版）	稆	lữ
 （廣州音）	稆	lũi
 （南寧音）	稆	lữ
+（通用版）	穭	lữ
 （廣州音）	穭	lũi
 （台山音）	穭	lũi
 （南寧音）	穭	lữ
@@ -43821,6 +43839,7 @@
 （廣州音）	謱	lồ
 （廣州音）	讄	lũi
 （廣州音）	郘	lũi
+（通用版）	鋁	lữ
 （廣州音）	鋁	lũi
 （台山音）	鋁	lũi
 （欽州音）	鋁	lỉ
@@ -43828,6 +43847,7 @@
 （廣州音）	鑸	lũi
 （廣州音）	頛	lũi
 （廣州音）	鸓	lũi
+（通用版）	麿	lữ
 （廣州音）	麿	lũi
 （台山音）	麿	mót
 （台山音）	麿	mỳ
@@ -50673,6 +50693,7 @@
 （南寧音）	浽	slôi
 （廣州音）	脮	nũi
 （廣州音）	腇	nũi
+（通用版）	釹	nữ
 （廣州音）	釹	nũi
 （台山音）	釹	nủi
 （欽州音）	釹	nỉ
