--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -12539,7 +12539,7 @@
 （通用版）	拴	slan
 （廣州音）	拴	san
 （廣州音）	拴	xoàn
-（台山音）	拴	oản
+（台山音）	拴	ủn
 （台山音）	拴	slụn
 （台山音）	拴	sán
 （欽州音）	拴	san
@@ -12566,7 +12566,7 @@
 （廣州音）	椯	đỏ
 （廣州音）	椽	oàn
 （廣州音）	椽	xoàn
-（台山音）	椽	oàn
+（台山音）	椽	ùn
 （欽州音）	椽	xiền
 （南寧音）	椽	xoàn
 （南寧音）	椽	(又)yoàn
@@ -12664,7 +12664,7 @@
 （南寧音）	吮	soãn
 （廣州音）	沌	xoãn
 （廣州音）	沌	đụn
-（台山音）	沌	oạn
+（台山音）	沌	ụn
 （欽州音）	沌	đần
 （南寧音）	沌	đận
 （南寧音）	沌	choạn
@@ -13907,16 +13907,16 @@
 （廣州音）	墩	đun
 （廣州音）	墩	đân
 （廣州音）	墩	đẩn
-（台山音）	墩	oản
+（台山音）	墩	ủn
 （欽州音）	墩	đân
 （南寧音）	墩	đân
 （南寧音）	墩	(白)đẩn
 （廣州音）	墪	đun
 （廣州音）	墪	đân
 （廣州音）	墪	đẩn
-（台山音）	墪	oản
+（台山音）	墪	ủn
 （廣州音）	躉	đẩn
-（台山音）	躉	oản
+（台山音）	躉	ủn
 （欽州音）	躉	đẩn
 （南寧音）	躉	đẩn
 （廣州音）	𣎴	đẩn
@@ -13925,7 +13925,7 @@
 （廣州音）	扽	đấn
 （廣州音）	扽	đận
 （廣州音）	扽	đụn
-（台山音）	扽	oạn
+（台山音）	扽	ụn
 （台山音）	扽	tụn
 （欽州音）	扽	đấn
 （南寧音）	扽	đân
@@ -13936,22 +13936,22 @@
 （南寧音）	撉	đân
 （廣州音）	撴	đun
 （廣州音）	撴	đấn
-（台山音）	撴	oạn
+（台山音）	撴	ụn
 （欽州音）	撴	đấn
 （南寧音）	撴	đân
 （廣州音）	蹾	đấn
-（台山音）	蹾	oạn
+（台山音）	蹾	ụn
 （南寧音）	蹾	đân
 （廣州音）	伅	đận
 （廣州音）	伅	đụn
 （廣州音）	崸	đận
 （廣州音）	炖	đận
 （廣州音）	炖	đụn
-（台山音）	炖	oạn
+（台山音）	炖	ụn
 （南寧音）	炖	đấn
 （廣州音）	燉	đận
 （廣州音）	燉	đụn
-（台山音）	燉	oạn
+（台山音）	燉	ụn
 （欽州音）	燉	đần
 （南寧音）	燉	đấn
 （廣州音）	踲	đận
@@ -14422,8 +14422,8 @@
 （廣州音）	敦	đụn
 （廣州音）	敦	đụi
 （台山音）	敦	iệu
-（台山音）	敦	oán
-（台山音）	敦	oạn
+（台山音）	敦	ún
+（台山音）	敦	ụn
 （台山音）	敦	úi
 （欽州音）	敦	đân
 （南寧音）	敦	đân
@@ -14534,7 +14534,7 @@
 （南寧音）	錞	(又)soàn
 （廣州音）	鐓	đun
 （廣州音）	鐓	đụi
-（台山音）	鐓	oán
+（台山音）	鐓	ún
 （台山音）	鐓	úi
 （欽州音）	鐓	đân
 （欽州音）	鐓	đùi
@@ -14545,7 +14545,7 @@
 （廣州音）	㢯	đun
 （廣州音）	㥫	đun
 （廣州音）	㪟	đun
-（台山音）	㪟	oạn
+（台山音）	㪟	ụn
 （廣州音）	㻻	đun
 （廣州音）	䃦	đun
 （廣州音）	䔻	đun
@@ -14554,18 +14554,18 @@
 （南寧音）	吨	đân
 （廣州音）	噸	đun
 （廣州音）	噸	đụn
-（台山音）	噸	oản
+（台山音）	噸	ủn
 （欽州音）	噸	đân
 （南寧音）	噸	đân
 （廣州音）	惇	đun
-（台山音）	惇	oạn
+（台山音）	惇	ụn
 （欽州音）	惇	đân
 （南寧音）	惇	đân
 （廣州音）	橔	đun
 （廣州音）	犜	đun
 （廣州音）	獤	đun
 （廣州音）	礅	đun
-（台山音）	礅	oản
+（台山音）	礅	ủn
 （欽州音）	礅	đân
 （南寧音）	礅	đân
 （廣州音）	蜳	thân
@@ -14577,13 +14577,13 @@
 （南寧音）	諄	chân
 （南寧音）	諄	(老派)choan
 （廣州音）	驐	đun
-（台山音）	驐	oán
+（台山音）	驐	ún
 （南寧音）	驐	đân
 （廣州音）	䤜	đụn
 （廣州音）	囤	thoàn
 （廣州音）	囤	thùn
 （廣州音）	囤	đụn
-（台山音）	囤	oản
+（台山音）	囤	ủn
 （台山音）	囤	xùn
 （欽州音）	囤	thiền
 （欽州音）	囤	thần
@@ -14595,29 +14595,29 @@
 （廣州音）	潡	đụn
 （廣州音）	盹	chún
 （廣州音）	盹	đụn
-（台山音）	盹	oãn
+（台山音）	盹	ũn
 （欽州音）	盹	đần
 （南寧音）	盹	đận
 （廣州音）	砘	đụn
-（台山音）	砘	oạn
+（台山音）	砘	ụn
 （欽州音）	砘	đần
 （南寧音）	砘	đận
 （廣州音）	逇	đụn
 （廣州音）	遁	đụn
-（台山音）	遁	oạn
+（台山音）	遁	ụn
 （欽州音）	遁	đần
 （南寧音）	遁	đận
 （廣州音）	遯	đụn
 （南寧音）	遯	đận
 （廣州音）	鈍	đụn
 （台山音）	鈍	hún
-（台山音）	鈍	oạn
+（台山音）	鈍	ụn
 （欽州音）	鈍	đần
 （南寧音）	鈍	đận
 （廣州音）	頓	đục
 （廣州音）	頓	đụn
-（台山音）	頓	oãn
-（台山音）	頓	oạn
+（台山音）	頓	ũn
+（台山音）	頓	ụn
 （台山音）	頓	ụt
 （欽州音）	頓	đần
 （欽州音）	頓	đục
@@ -26592,7 +26592,7 @@
 （南寧音）	袞	quẩn
 （廣州音）	裷	quẩn
 （台山音）	裷	kủn
-（台山音）	裷	oán
+（台山音）	裷	ún
 （廣州音）	輥	khuẩn
 （廣州音）	輥	quẩn
 （台山音）	輥	khũn
@@ -34997,7 +34997,7 @@
 （廣州音）	稴	yiềm
 （廣州音）	芫	oàn
 （廣州音）	芫	yiềm
-（台山音）	芫	oàn
+（台山音）	芫	ùn
 （欽州音）	芫	yiền
 （南寧音）	芫	(習)yiềm
 （南寧音）	芫	(書)yoàn
@@ -35253,14 +35253,14 @@
 （廣州音）	驠	yiến/yến
 （廣州音）	鴛	oan
 （廣州音）	鴛	yiên/yên
-（台山音）	鴛	oán
+（台山音）	鴛	ún
 （欽州音）	鴛	yiên
 （南寧音）	鴛	oan
 （廣州音）	㫃	yiển
 （廣州音）	䤷	yiển/yển
 （廣州音）	兗	yiển
 （廣州音）	兗	yiễn
-（台山音）	兗	oản
+（台山音）	兗	ủn
 （欽州音）	兗	yiển
 （南寧音）	兗	yiễn
 （廣州音）	匽	yiển/yển
@@ -38628,7 +38628,7 @@
 （廣州音）	䳒	oàn
 （廣州音）	䳣	oan
 （廣州音）	冤	oan
-（台山音）	冤	oán
+（台山音）	冤	ún
 （欽州音）	冤	yiên
 （南寧音）	冤	oan
 （廣州音）	剈	oan
@@ -38641,7 +38641,7 @@
 （廣州音）	宛	oản
 （廣州音）	宛	vổn
 （台山音）	宛	vỏn
-（台山音）	宛	oán
+（台山音）	宛	ún
 （欽州音）	宛	vổn
 （欽州音）	宛	yiển
 （南寧音）	宛	oan
@@ -38659,7 +38659,7 @@
 （南寧音）	涴	vó
 （南寧音）	涴	(語)võ
 （廣州音）	淵	oan
-（台山音）	淵	oán
+（台山音）	淵	ún
 （欽州音）	淵	yiên
 （南寧音）	淵	oan
 （廣州音）	渁	oan
@@ -38668,10 +38668,10 @@
 （南寧音）	渕	oan
 （廣州音）	灁	oan
 （廣州音）	眢	oan
-（台山音）	眢	oán
+（台山音）	眢	ún
 （南寧音）	眢	oan
 （廣州音）	箢	oan
-（台山音）	箢	oán
+（台山音）	箢	ún
 （南寧音）	箢	oan
 （廣州音）	肙	oan
 （廣州音）	葾	oan
@@ -38689,11 +38689,11 @@
 （廣州音）	駌	oan
 （廣州音）	鳶	oan
 （廣州音）	鳶	oàn
-（台山音）	鳶	oán
+（台山音）	鳶	ún
 （欽州音）	鳶	yiên
 （南寧音）	鳶	oan
 （廣州音）	鵷	oan
-（台山音）	鵷	oán
+（台山音）	鵷	ún
 （南寧音）	鵷	oan
 （廣州音）	鼘	oan
 （廣州音）	鼝	oan
@@ -38710,7 +38710,7 @@
 （廣州音）	䳃	oản
 （廣州音）	丸	oàn
 （廣州音）	丸	oản
-（台山音）	丸	oàn
+（台山音）	丸	ùn
 （欽州音）	丸	yiền
 （南寧音）	丸	yoàn
 （廣州音）	倇	oản
@@ -38735,7 +38735,7 @@
 （廣州音）	晼	vổn
 （廣州音）	烷	oàn
 （廣州音）	烷	oản
-（台山音）	烷	oàn
+（台山音）	烷	ùn
 （欽州音）	烷	yiền
 （南寧音）	烷	yoàn
 （廣州音）	琬	oản
@@ -38751,7 +38751,7 @@
 （廣州音）	縣	oàn
 （廣州音）	縣	oản
 （廣州音）	縣	yoạn
-（台山音）	縣	oạn
+（台山音）	縣	ụn
 （欽州音）	縣	hiền
 （欽州音）	縣	yiền
 （南寧音）	縣	(白)oản
@@ -38780,7 +38780,7 @@
 （南寧音）	阮	yoãn
 （廣州音）	院	oản
 （廣州音）	院	yoạn
-（台山音）	院	oạn
+（台山音）	院	ụn
 （欽州音）	院	yiền
 （南寧音）	院	oản
 （廣州音）	𡟃	oản
@@ -38794,7 +38794,7 @@
 （廣州音）	䛄	oán
 （廣州音）	䬼	oán
 （廣州音）	怨	oán
-（台山音）	怨	oán
+（台山音）	怨	ún
 （欽州音）	怨	yiến
 （南寧音）	怨	yoán
 （廣州音）	惌	oán
@@ -38837,7 +38837,7 @@
 （南寧音）	允	vẫn
 （廣州音）	元	oàn
 （台山音）	元	ngùn
-（台山音）	元	oàn
+（台山音）	元	ùn
 （欽州音）	元	yiền
 （南寧音）	元	yoàn
 （廣州音）	円	oàn
@@ -38856,25 +38856,25 @@
 （廣州音）	員	vần
 （廣州音）	員	vận
 （台山音）	員	vún
-（台山音）	員	oàn
+（台山音）	員	ùn
 （欽州音）	員	yiền
 （南寧音）	員	yoàn
 （南寧音）	員	vần
 （南寧音）	員	vận
 （廣州音）	圎	oàn
 （廣州音）	園	oàn
-（台山音）	園	oàn
+（台山音）	園	ùn
 （欽州音）	園	yiền
 （南寧音）	園	yoàn
 （廣州音）	圓	oàn
-（台山音）	圓	oàn
-（台山音）	圓	oãn
+（台山音）	圓	ùn
+（台山音）	圓	ũn
 （欽州音）	圓	yiền
 （南寧音）	圓	yoàn
 （廣州音）	圜	oàn
 （廣州音）	圜	vàn
 （台山音）	圜	vàn
-（台山音）	圜	oàn
+（台山音）	圜	ùn
 （欽州音）	圜	vàn
 （欽州音）	圜	yiền
 （南寧音）	圜	yoàn
@@ -38892,19 +38892,19 @@
 （廣州音）	媛	oàn
 （廣州音）	媛	vồn
 （廣州音）	媛	yoạn
-（台山音）	媛	oàn
+（台山音）	媛	ùn
 （欽州音）	媛	vồn
 （欽州音）	媛	yiền
 （南寧音）	媛	yoàn
 （南寧音）	媛	yoạn
 （廣州音）	媴	oàn
-（台山音）	媴	oàn
+（台山音）	媴	ùn
 （廣州音）	嫄	oàn
 （台山音）	嫄	ngùn
 （欽州音）	嫄	yiền
 （南寧音）	嫄	yoàn
 （廣州音）	完	oàn
-（台山音）	完	oàn
+（台山音）	完	ùn
 （欽州音）	完	yiền
 （南寧音）	完	yoàn
 （廣州音）	寏	oàn
@@ -38912,7 +38912,7 @@
 （廣州音）	忨	oàn
 （廣州音）	忨	vộn
 （廣州音）	懸	oàn
-（台山音）	懸	oàn
+（台山音）	懸	ùn
 （欽州音）	懸	hiền
 （南寧音）	懸	yoàn
 （廣州音）	抏	oàn
@@ -38921,7 +38921,7 @@
 （廣州音）	援	oàn
 （廣州音）	援	vồn
 （廣州音）	援	yoạn
-（台山音）	援	oàn
+（台山音）	援	ùn
 （欽州音）	援	vồn
 （欽州音）	援	yiền
 （南寧音）	援	yoàn
@@ -38934,7 +38934,7 @@
 （廣州音）	榞	oàn
 （廣州音）	榬	oàn
 （廣州音）	櫞	oàn
-（台山音）	櫞	oàn
+（台山音）	櫞	ùn
 （南寧音）	櫞	yoàn
 （廣州音）	汍	oàn
 （廣州音）	沅	oàn
@@ -38942,7 +38942,7 @@
 （欽州音）	沅	yiền
 （南寧音）	沅	yoàn
 （廣州音）	沿	oàn
-（台山音）	沿	oàn
+（台山音）	沿	ùn
 （欽州音）	沿	yiền
 （南寧音）	沿	yoàn
 （廣州音）	洹	oàn
@@ -38952,7 +38952,7 @@
 （南寧音）	洹	vồn
 （廣州音）	湲	oàn
 （廣州音）	湲	vồn
-（台山音）	湲	oàn
+（台山音）	湲	ùn
 （南寧音）	湲	yoàn
 （廣州音）	源	oàn
 （台山音）	源	ngùn
@@ -38961,27 +38961,27 @@
 （廣州音）	溒	oàn
 （廣州音）	炫	oàn
 （廣州音）	炫	yoạn
-（台山音）	炫	oàn
+（台山音）	炫	ùn
 （欽州音）	炫	hiền
 （南寧音）	炫	(常)yoàn
 （南寧音）	炫	yoạn
 （廣州音）	爰	oàn
 （廣州音）	爰	vồn
-（台山音）	爰	oàn
+（台山音）	爰	ùn
 （欽州音）	爰	vồn
 （南寧音）	爰	yoàn
 （廣州音）	犉	oàn
 （廣州音）	犉	sùn
 （廣州音）	猨	oàn
-（台山音）	猨	oàn
+（台山音）	猨	ùn
 （廣州音）	猿	oàn
-（台山音）	猿	oàn
+（台山音）	猿	ùn
 （欽州音）	猿	yiền
 （南寧音）	猿	yoàn
 （廣州音）	獂	oàn
 （廣州音）	獂	vồn
 （廣州音）	玄	oàn
-（台山音）	玄	oàn
+（台山音）	玄	ùn
 （欽州音）	玄	hiền
 （南寧音）	玄	yoàn
 （廣州音）	玆	chi
@@ -38992,14 +38992,14 @@
 （廣州音）	眩	oàn
 （廣州音）	眩	vạn
 （廣州音）	眩	yoạn
-（台山音）	眩	oàn
+（台山音）	眩	ùn
 （欽州音）	眩	hiền
 （南寧音）	眩	(常)yoàn
 （南寧音）	眩	yoạn
 （廣州音）	笂	oàn
 （廣州音）	笎	oàn
 （廣州音）	紈	oàn
-（台山音）	紈	oàn
+（台山音）	紈	ùn
 （欽州音）	紈	yiền
 （南寧音）	紈	yoàn
 （廣州音）	綄	oàn
@@ -39009,14 +39009,14 @@
 （南寧音）	綄	vỗn
 （廣州音）	緣	oàn
 （廣州音）	緣	yoạn
-（台山音）	緣	oàn
+（台山音）	緣	ùn
 （欽州音）	緣	yiền
 （南寧音）	緣	yoàn
 （廣州音）	縁	oàn
 （廣州音）	羱	oàn
 （南寧音）	羱	yoàn
 （廣州音）	芄	oàn
-（台山音）	芄	oàn
+（台山音）	芄	ùn
 （南寧音）	芄	yoàn
 （廣州音）	蒝	oàn
 （廣州音）	蒝	vồn
@@ -39025,17 +39025,17 @@
 （台山音）	蚖	ngùn
 （廣州音）	蝝	oàn
 （廣州音）	蝯	oàn
-（台山音）	蝯	oàn
+（台山音）	蝯	ùn
 （廣州音）	螈	oàn
 （台山音）	螈	ngùn
 （欽州音）	螈	yiền
 （南寧音）	螈	yoàn
 （廣州音）	衒	oàn
 （廣州音）	衒	yoạn
-（台山音）	衒	oàn
+（台山音）	衒	ùn
 （南寧音）	衒	yoạn
 （廣州音）	袁	oàn
-（台山音）	袁	oàn
+（台山音）	袁	ùn
 （欽州音）	袁	yiền
 （南寧音）	袁	yoàn
 （廣州音）	褑	oàn
@@ -39045,7 +39045,7 @@
 （廣州音）	貟	oàn
 （廣州音）	貟	vận
 （廣州音）	轅	oàn
-（台山音）	轅	oàn
+（台山音）	轅	ùn
 （欽州音）	轅	yiền
 （南寧音）	轅	yoàn
 （廣州音）	邍	oàn
@@ -39053,11 +39053,11 @@
 （廣州音）	酛	oàn
 （廣州音）	釻	oàn
 （廣州音）	鈆	oàn
-（台山音）	鈆	oàn
+（台山音）	鈆	ùn
 （南寧音）	鈆	yoàn
 （廣州音）	鈨	oàn
 （廣州音）	鉛	oàn
-（台山音）	鉛	oàn
+（台山音）	鉛	ùn
 （欽州音）	鉛	yiền
 （南寧音）	鉛	yoàn
 （廣州音）	鎱	oàn
@@ -39069,13 +39069,13 @@
 （廣州音）	騵	oàn
 （南寧音）	騵	yoàn
 （廣州音）	魭	oàn
-（台山音）	魭	oàn
+（台山音）	魭	ùn
 （廣州音）	鶢	oàn
 （廣州音）	鶢	vồn
-（台山音）	鶢	oàn
+（台山音）	鶢	ùn
 （廣州音）	鶰	oàn
 （廣州音）	黿	oàn
-（台山音）	黿	oàn
+（台山音）	黿	ùn
 （欽州音）	黿	yiền
 （南寧音）	黿	yoàn
 （廣州音）	𠒑	oàn
@@ -39106,7 +39106,7 @@
 （廣州音）	愞	nọ
 （廣州音）	愞	oãn
 （廣州音）	泫	oãn
-（台山音）	泫	oàn
+（台山音）	泫	ùn
 （南寧音）	泫	yoãn
 （廣州音）	琄	oãn
 （廣州音）	琄	yoạn
@@ -39137,8 +39137,8 @@
 （廣州音）	逺	oãn
 （廣州音）	遠	oãn
 （廣州音）	遠	yoạn
-（台山音）	遠	oạn
-（台山音）	遠	oản
+（台山音）	遠	ụn
+（台山音）	遠	ủn
 （欽州音）	遠	yiển
 （南寧音）	遠	yoãn
 （廣州音）	鉉	oãn
@@ -39157,21 +39157,21 @@
 （廣州音）	傆	yoạn
 （廣州音）	垸	vổn
 （廣州音）	垸	yoạn
-（台山音）	垸	oạn
+（台山音）	垸	ụn
 （南寧音）	垸	yoạn
 （廣州音）	怰	yoạn
 （廣州音）	愿	yoạn
 （欽州音）	愿	yiền
 （南寧音）	愿	yoạn
 （廣州音）	掾	yoạn
-（台山音）	掾	oạn
+（台山音）	掾	ụn
 （欽州音）	掾	yiền
 （南寧音）	掾	yoạn
 （廣州音）	昡	yoạn
 （欽州音）	昡	yiền
 （南寧音）	昡	yoạn
 （廣州音）	瑗	yoạn
-（台山音）	瑗	oàn
+（台山音）	瑗	ùn
 （南寧音）	瑗	yoạn
 （廣州音）	県	yoạn
 （廣州音）	禐	yoạn
@@ -57185,7 +57185,7 @@
 （廣州音）	屯	thoàn
 （台山音）	屯	hùn
 （台山音）	屯	hũn
-（台山音）	屯	oản
+（台山音）	屯	ủn
 （台山音）	屯	xũn
 （台山音）	屯	xũn
 （欽州音）	屯	chân
@@ -57267,7 +57267,7 @@
 （南寧音）	揗	(老派)sloàn
 （廣州音）	楯	sũn
 （廣州音）	楯	thũn
-（台山音）	楯	oạn
+（台山音）	楯	ụn
 （台山音）	楯	sõn
 （欽州音）	楯	sẩn
 （南寧音）	楯	đận
@@ -57275,7 +57275,7 @@
 （廣州音）	盾	sũn
 （廣州音）	盾	thũn
 （台山音）	盾	hũn
-（台山音）	盾	oạn
+（台山音）	盾	ụn
 （欽州音）	盾	đần
 （南寧音）	盾	đận
 （廣州音）	碷	sũn
@@ -61059,7 +61059,7 @@
 （廣州音）	旽	thân
 （廣州音）	暾	thân
 （台山音）	暾	hún
-（台山音）	暾	oán
+（台山音）	暾	ún
 （欽州音）	暾	thân
 （南寧音）	暾	thân
 （廣州音）	朜	thân
@@ -63900,7 +63900,7 @@
 （欽州音）	沄	vần
 （南寧音）	沄	vần
 （廣州音）	溳	vần
-（台山音）	溳	oàn
+（台山音）	溳	ùn
 （南寧音）	溳	vần
 （廣州音）	澐	vần
 （南寧音）	澐	vần
